--- a/_posts/2020-05-24-nlp_nplm.md
+++ b/_posts/2020-05-24-nlp_nplm.md
@@ -17,15 +17,20 @@ tag: NLP
 
 횟수 기반 표현을 사용하지 않고 단어를 벡터화하는 가장 단순하고 직관적인 방법은 **원-핫 인코딩(One-hot Encoding)**입니다. 원-핫 인코딩은 적용하는 방법은 다음과 같습니다. 일단 문서에 존재하는 단어의 개수 만큼의 차원을 가진 영벡터를 만듭니다. 그리고 단어가 등장하는 순서에 따라 해당 인덱스를 1로 변환한 뒤 그 단어의 벡터로 매칭시켜줍니다. 예를 들어,  *"What's your name? My name is Yngie."* 라는 문장에 있는 단어를 원-핫 인코딩을 사용하여 벡터로 표현하면 다음과 같습니다.
 
-> what : $\left[{\begin{array}{cccccc} 1 & 0 & 0 & 0 & 0 & 0 \end{array}}\right]$
-> is : $\left[{\begin{array}{cccccc} 0 & 1 & 0 & 0 & 0 & 0 \end{array}}\right]$
-> your : $\left[{\begin{array}{cccccc} 0 & 0 & 1 & 0 & 0 & 0 \end{array}}\right]$
-> name : $\left[{\begin{array}{cccccc} 0 & 0 & 0 & 1 & 0 & 0 \end{array}}\right]$
-> my : $\left[{\begin{array}{cccccc} 0 & 0 & 0 & 0 & 1 & 0 \end{array}}\right]$
-> Yngie : $\left[{\begin{array}{cccccc} 0 & 0 & 0 & 0 & 0 & 1 \end{array}}\right]$
+
+$$
+\begin{aligned}
+\text{what} : \left[{\begin{array}{cccccc} 1 & 0 & 0 & 0 & 0 & 0 \end{array}}\right] \\
+\text{is} : \left[{\begin{array}{cccccc} 0 & 1 & 0 & 0 & 0 & 0 \end{array}}\right] \\
+\text{your} : \left[{\begin{array}{cccccc} 0 & 0 & 1 & 0 & 0 & 0 \end{array}}\right] \\
+\text{name} : \left[{\begin{array}{cccccc} 0 & 0 & 0 & 1 & 0 & 0 \end{array}}\right] \\
+\text{my} : \left[{\begin{array}{cccccc} 0 & 0 & 0 & 0 & 1 & 0 \end{array}}\right] \\
+\text{Yngie} : \left[{\begin{array}{cccccc} 0 & 0 & 0 & 0 & 0 & 1 \end{array}}\right]
+\end{aligned}
+$$
+
 
 원-핫 인코딩은 단순하고 이해하기 쉽다는 장점이 있습니다. 하지만 단어끼리의 관계를 모사할 수가 없게 됩니다. 벡터 간 유사도를 판단하는 방법은 다양하지만, 단어 벡터 사이의 유사도를 판단하는 데에는 주로 **코사인 유사도(Cosine similarity)**가 사용됩니다. 코사인 유사도의 수식은 다음과 같습니다.
-
 
 $$
 \text{similarity}(\vec{x},\vec{y}) = \frac{\vec{x} \cdot \vec{y}}{\Vert\vec{x}\Vert \Vert\vec{y}\Vert} = \frac{x_1y_1 + \cdots + x_ny_n}{\sqrt{x_1^2+\cdots+x_n^2} \sqrt{y_1^2+\cdots+y_n^2}}
@@ -64,20 +69,26 @@ $$
 
 실제의 연산은 모든 단어를 원-핫 인코딩을 통해 원-핫 벡터 $w_t$ 로 나타낸 뒤에 $C$ 와 내적하는 과정으로 이루어집니다. 원-핫 인코딩에서 사용했던 *"What's your name? My name is Yngie."* 문장을 예시로 다시 가져와보겠습니다.
 
-> what : $\left[{\begin{array}{cccccc} 1 & 0 & 0 & 0 & 0 & 0 \end{array}}\right]$
-> is : $\left[{\begin{array}{cccccc} 0 & 1 & 0 & 0 & 0 & 0 \end{array}}\right]$
-> your : $\left[{\begin{array}{cccccc} 0 & 0 & 1 & 0 & 0 & 0 \end{array}}\right]$
-> name : $\left[{\begin{array}{cccccc} 0 & 0 & 0 & 1 & 0 & 0 \end{array}}\right]$
-> my : $\left[{\begin{array}{cccccc} 0 & 0 & 0 & 0 & 1 & 0 \end{array}}\right]$
-> Yngie : $\left[{\begin{array}{cccccc} 0 & 0 & 0 & 0 & 0 & 1 \end{array}}\right]$
+
+$$
+\begin{aligned}
+\text{what} : \left[{\begin{array}{cccccc} 1 & 0 & 0 & 0 & 0 & 0 \end{array}}\right] \\
+\text{is} : \left[{\begin{array}{cccccc} 0 & 1 & 0 & 0 & 0 & 0 \end{array}}\right] \\
+\text{your} : \left[{\begin{array}{cccccc} 0 & 0 & 1 & 0 & 0 & 0 \end{array}}\right] \\
+\text{name} : \left[{\begin{array}{cccccc} 0 & 0 & 0 & 1 & 0 & 0 \end{array}}\right] \\
+\text{my} : \left[{\begin{array}{cccccc} 0 & 0 & 0 & 0 & 1 & 0 \end{array}}\right] \\
+\text{Yngie} : \left[{\begin{array}{cccccc} 0 & 0 & 0 & 0 & 0 & 1 \end{array}}\right]
+\end{aligned}
+$$
+
 
 이 단어를 5차원 벡터로 나타내려면 참조할 행렬 $C$ 의 사이즈는 어떻게 되어야 할까요? 단어의 개수 $\vert V\vert = 6$ 이고 나타내고자 하는 임베딩 벡터의 차원 $n = 5$ 이므로 $6 \times 5$ 가 되어야 하겠습니다. 행렬 $C$ 의 성분은 정해져 있는 것이 아니고 초기에 임의의 값을 넣어준 후 학습 과정에서 갱신되는 것이므로 임의의 값을 넣어 만들어 보겠습니다.
 
-> $$
-> C : \left[{\begin{array}{ccccc} 10 & 2 & 3 & 2 & 4 \\ 
-> 4 & 9 & 7 & 3 & 5 \\ 1 & 4 & 11 & 3 & 7 \\ 7 & 7 & 5 & 4 & 2 \\ 9 & 8 & 3 & 2 & 5 \\ 8 & 2 & 3 & 1 & 7 \end{array}}\right]
-> $$
 
+$$
+C : \left[{\begin{array}{ccccc} 10 & 2 & 3 & 2 & 4 \\ 
+4 & 9 & 7 & 3 & 5 \\ 1 & 4 & 11 & 3 & 7 \\ 7 & 7 & 5 & 4 & 2 \\ 9 & 8 & 3 & 2 & 5 \\ 8 & 2 & 3 & 1 & 7 \end{array}}\right]
+$$
 
 
 단어의 원-핫 벡터 $w_t$ 와 $C$ 를 내적하면 각 단어의 벡터 $\mathbf{x}_t$ 를 구할 수 있게 됩니다. $C$ 의 각 행이 단어 벡터가 되는 것을 알 수 있습니다. 예를 들어, *"name"* 의 임베딩 벡터 $\mathbf{x}_4$ 가 만들어지는 과정을 보겠습니다.
@@ -88,17 +99,12 @@ $$
 4 & 9 & 7 & 3 & 5 \\ 1 & 4 & 11 & 3 & 7 \\ 7 & 7 & 5 & 4 & 2 \\ 9 & 8 & 3 & 2 & 5 \\ 8 & 2 & 3 & 1 & 7 \end{array}}\right] = \left[{\begin{array}{ccccc} 7 & 7 & 5 & 4 & 2 \end{array}}\right]
 $$
 
-
-N-gram 방식을 사용하여 타겟 단어의 확률을 예측하기 때문에 입력 데이터는 $N-1$ 개의 단어 벡터가 됩니다. 예를 들어, *"What's your name? My name is Yngie."* 라는 문장에서 첫 번째 *"name"* 을 Tri-gram, 즉 $N=3$ 으로 예측한다면 *"is, your"* 의 임베딩 벡터를 입력하게 되므로 입력 데이터는 다음과 같아집니다.
-
+N-gram 방식을 사용하여 타겟 단어의 확률을 예측하기 때문에 입력 데이터는 $N-1$ 개의 단어 벡터가 됩니다. 예를 들어, *"What's your name? My name is Yngie."* 라는 문장에서 첫 번째 *"name"* 을 Tri-gram, 즉 $N=3$ 으로 예측한다면 *"is, your"* 의 임베딩 벡터를 입력하게 되므로 입력 데이터는 다음과 같아집니다. 아래 식에서 $\mathbf{x_2}, \mathbf{x_3}$ 는 각각 *"is"* 와 *"your"* 의 임베딩 벡터를 나타낸 것입니다.
 
 
-> *"is"* 의 임베딩 벡터는  $\mathbf{x_2} : \left[{\begin{array}{ccccc} 4 & 9 & 7 & 3 & 5 \end{array}}\right]$
-> *"your"* 의 임베딩 벡터는  $\mathbf{x_3} : \left[{\begin{array}{ccccc} 1 & 4 & 11 & 3 & 7 \end{array}}\right]$
-> $$
-> \therefore \mathbf{x} = [\mathbf{x}_2, \mathbf{x}_3] = [\left[{\begin{array}{ccccc} 4 & 9 & 7 & 3 & 5 \end{array}}\right], \left[{\begin{array}{ccccc} 1 & 4 & 11 & 3 & 7 \end{array}}\right]
-> $$
-
+$$
+\therefore \mathbf{x} = [\mathbf{x}_2, \mathbf{x}_3] = [\left[{\begin{array}{ccccc} 4 & 9 & 7 & 3 & 5 \end{array}}\right], \left[{\begin{array}{ccccc} 1 & 4 & 11 & 3 & 7 \end{array}}\right]
+$$
 
 
 은닉층에 들어간 입력 벡터는 다음의 함수를 거쳐 출력층에 들어가는 벡터 $\mathbf{y}_{w_t}$ 가 됩니다.
@@ -127,9 +133,7 @@ $$
 
 확률론적 신경망 언어 모델을 포함한 이후의 언어 모델은 위에서 말했던 것과 같이 단어의 의미 관계를 학습하기 때문에 말뭉치에 등장하지 않는 단어라도 생성해낼 수 있다는 장점이 있습니다. 단순한 예시로 다음과 같은 세 문장이 있는 말뭉치가 있다고 해봅시다.
 
-> *"there are three teams left for qualification."*
-> *"four teams have passed the first round."*
-> *"four groups are playing in the field."*
+> *"there are three teams left for qualification."* , *"four teams have passed the first round."*, *"four groups are playing in the field."*
 
 신경망 언어 모델은 단어의 관계를 파악하기 때문에 말뭉치에는 없는 *"three groups"* 라는 단어 시퀀스를 만들어 낼 수 있게 됩니다.
 
