--- a/_posts/2020-05-01-val_eval.md
+++ b/_posts/2020-05-01-val_eval.md
@@ -29,7 +29,7 @@ tag: Machine-Learning
 
 **Holdout** 검증은 가장 기본적인 모델 검증 방법입니다. 전체 데이터셋에서 테스트 데이터를 분리하고 남은 학습 데이터의 일부를 검증 데이터셋으로 또 분리하는 방법입니다. 즉, 전체 데이터를 3개*(학습 데이터, 검증 데이터, 테스트 데이터)*로 나누게 되는 것이지요. 이 방식은 가장 간단하지만 학습 데이터에 손실이 있기 때문에 데이터가 적은 경우에 사용하기 힘들고, 검증을 한 번 밖에 진행할 수 없다는 단점이 있습니다. 아래는 홀드아웃 방식을 적용했을 때 데이터가 나누어지는 방식입니다.
 
-<img src="https://www.datavedas.com/wp-content/uploads/2018/04/image003.jpg" alt="Holdout" style="zoom: 80%;" />
+<p align="center"><img src="https://www.datavedas.com/wp-content/uploads/2018/04/image003.jpg" alt="Holdout" style="zoom: 80%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.datavedas.com/holdout-cross-validation/">datavedas.com</a></p>
 
@@ -47,13 +47,13 @@ tag: Machine-Learning
 
 **LOOCV(Leave-one-out cross validation)**는 K-fold 교차 검증의 극단적인 형태로, 학습 데이터셋이 극도로 작을 때 사용할 수 있는 교차검증 방법입니다. LOOCV는 오직 한 개의 인스턴스만을 검증 데이터셋으로 남겨 놓습니다(Leave-one-out). 검증 데이터가 하나이므로 학습 데이터가 총 $N$ 개라면 총 $N$ 번의 교차 검증을 진행하게 됩니다. 학습 데이터의 손실을 최소화 할 수 있지만, 샘플 데이터 수가 1000개만 되어도 총 1000번의 학습과 검증을 진행해야 하기 때문에 시간과 컴퓨팅 자원이 많이 소모된다는 단점이 있습니다. 아래는 LOOCV가 진행되는 방식을 그림으로 나타낸 것입니다.
 
-![loocv](https://smlee729.github.io/img/2015-03-19-1-loocv/loocv1.png)
+<p align="center"><img src="https://smlee729.github.io/img/2015-03-19-1-loocv/loocv1.png" alt="loocv" style="zoom:150%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://smlee729.github.io/r/machine%20learning/2015/03/19/1-loocv.html">smlee729.github.io</a></p>
 
 아래는 위 3개의 검증 방법을 비교하는 이미지입니다.
 
-<img src="https://t1.daumcdn.net/cfile/tistory/998212375C03889419" alt="LOOCV" style="zoom:67%;" />
+<p align="center"><img src="https://t1.daumcdn.net/cfile/tistory/998212375C03889419" alt="LOOCV" style="zoom:67%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://eda-ai-lab.tistory.com/49">eda-ai-lab.tistory.com</a></p>
 
@@ -75,7 +75,7 @@ tag: Machine-Learning
 
 조정하고 싶은 하이퍼파라미터 마다 조정하고 싶은 범위를 정합니다. 실제 학습 과정에서는 범위 내에 있는 임의의 값을 설정하여 각 파라미터에 대한 조합을 정합니다. Grid search는 지정한 값에 대해서만 학습과 검증을 시도하지만 Random search는 범위 내에 있는 임의의 값에 대하여 예상치 못한 조합을 시도해볼 수 있다는 장점이 있습니다. 아래는 Grid searc h 탐색법과 Random search 탐색법을 비교할 수 있는 이미지입니다.
 
-<img src="https://nanonets.com/blog/content/images/2019/03/HPO1.png" alt="search"  />
+<p align="center"><img src="https://nanonets.com/blog/content/images/2019/03/HPO1.png" alt="search" style="zoom:120%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://nanonets.com/blog/hyperparameter-optimization/">nanonets.com</a></p>
 
@@ -91,7 +91,7 @@ tag: Machine-Learning
 
 분류(Classification)에서 가장 많이 사용되는 오차 행렬(Confusion matrix)에 대해서 알아보겠습니다. 오차 행렬은 각 인스턴스의 실제 클래스와 예측 클래스의 개수를 행렬의 성분에 채워넣은 것입니다. 아래 오차 행렬에서는 각 열에 예측 클래스를, 각 행에 실제 클래스를 배치하고 있습니다. (배치는 그리는 사람에 따라 달라질 수 있습니다)
 
-<p align="center" style="font-size:80%"><img src="https://2.bp.blogspot.com/-EvSXDotTOwc/XMfeOGZ-CVI/AAAAAAAAEiE/oePFfvhfOQM11dgRn9FkPxlegCXbgOF4QCLcBGAs/s1600/confusionMatrxiUpdated.jpg" alt="CM" style="zoom: 80%;" /></p>
+<p align="center"><img src="https://2.bp.blogspot.com/-EvSXDotTOwc/XMfeOGZ-CVI/AAAAAAAAEiE/oePFfvhfOQM11dgRn9FkPxlegCXbgOF4QCLcBGAs/s1600/confusionMatrxiUpdated.jpg" alt="CM" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://manisha-sirsat.blogspot.com/2019/04/confusion-matrix.html">manisha-sirsat.blogspot.com</a></p>
 
@@ -159,31 +159,30 @@ $$
 
 이 수치를 설정하는 것이 바로 **임계값(Threshold)**입니다. 임계값을 크게 설정하면 정밀도가 올라가게 되고 작게 설정하면 재현율이 올라가게 되지요. 이런 현상을 **정밀도-재현율 트레이드 오프(Precision-Recall Trade-off)**라고 합니다. 어떤 분류기의 임계값에 따른 정밀도와 재현율을 그래프로 나타내면 다음과 같은 그림이 나오게 됩니다.
 
-![tradeoff](https://www.machinelearningaptitude.com/wp-content/uploads/2019/03/precision-recall-tradeoff.png)
+<p align="center"><img src="https://www.machinelearningaptitude.com/wp-content/uploads/2019/03/precision-recall-tradeoff.png" alt="tradeoff" style="zoom:120%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.machinelearningaptitude.com/topics/machine-learning/what-is-precision-recall-tradeoff/">machinelearningaptitude.com</a></p>
 
 위 그래프 외에 재현율-정밀도 그래프를 그려 적당한 지점을 판단하기도 합니다. 아래는 재현율-정밀도 그래프의 예시입니다.
 
-<img src="https://i.imgur.com/7TIpZUb.png" alt="pre_vs_rec" style="zoom: 33%;" />
+<p align="center"><img src="https://i.imgur.com/7TIpZUb.png" alt="pre_vs_rec" style="zoom: 33%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://sanyamkapoor.com/kb/visualizing-the-confusion-matrix">sanyamkapoor.com</a></p>
 
 ### F-Score
 
-**F-score(F-measure)**는 정밀도와 재현율 수치를 한 번에 보기 위해서 만들어진 수치입니다. 가장 일반적으로 사용되는 수치는 $\text{F}_1 \text{-score}$ 입니다. 이 수치는 정밀도와 재현율의 조화평균으로 정리하면 아래와 같은 수식으로 나타낼 수 있습니다.
+**F-score(F-measure)**는 정밀도와 재현율 수치를 한 번에 보기 위해서 만들어진 수치입니다. 가장 일반적으로 사용되는 수치는 $F_1 \text{-score}$ 입니다. 이 수치는 정밀도와 재현율의 조화평균으로 정리하면 아래와 같은 수식으로 나타낼 수 있습니다.
+
+$$
+F_1 \text{-Score} = \frac{2 \times \text{Precision} \times \text{Recall}}{\text{Precision} + \text{Recall}}
+$$
+
+
+위 스팸 메일 분류기나 암 환자 판별기처럼 특정 수치가 부각되어야 할 때는 $F_1 \text{-score}$ 를 일반화한 $F_\beta \text{-score}$ 를 사용합니다. 가중치 $\beta$ 를 처리해준 것으로 정밀도가 강조되어야 할 때는 $\beta < 1$ [Ex)  $F_{0.5} \text{-score}$]을 사용하고, 재현율이 강조되어야 할 때는 $\beta > 1$ [Ex) $F_2 \text{-score}$] 을 사용합니다. $F_\beta \text{-score}$ 의 수식은 아래와 같습니다.
 
 
 $$
-\text{F}_1 \text{-Score} = \frac{2 \times \text{Precision} \times \text{Recall}}{\text{Precision} + \text{Recall}}
-$$
-
-
-위 스팸 메일 분류기나 암 환자 판별기처럼 특정 수치가 부각되어야 할 때는 $\text{F}_1 \text{-score}$ 를 일반화한 $\text{F}_\beta \text{-score}$ 를 사용합니다. 가중치 $\beta$ 를 처리해준 것으로 정밀도가 강조되어야 할 때는 $\beta < 1$ [Ex)  $\text{F}_{0.5} \text{-score}$]을 사용하고, 재현율이 강조되어야 할 때는 $\beta > 1$ [Ex) $\text{F}_2 \text{-score}$] 을 사용합니다. $\text{F}_\beta \text{-score}$ 의 수식은 아래와 같습니다.
-
-
-$$
-\text{F}_\beta \text{-Score} = \frac{(1+\beta^2) \times \text{Precision} \times \text{Recall}}{\beta^2 \times \text{Precision} + \text{Recall}}
+F_\beta \text{-Score} = \frac{(1+\beta^2) \times \text{Precision} \times \text{Recall}}{\beta^2 \times \text{Precision} + \text{Recall}}
 $$
 
 
