--- a/_posts/2020-05-01-val_eval.md
+++ b/_posts/2020-05-01-val_eval.md
@@ -186,5 +186,53 @@ F_\beta \text{-Score} = \frac{(1+\beta^2) \times \text{Precision} \times \text{R
 $$
 
 
-### ROC-curve, AUC
+### ROC Curve, AUC
 
+분류 모델 성능 평가를 위해서 **AUC(Area Under Curve)** 역시 많이 사용됩니다. AUC는 말 뜻 그대로, ROC 곡선 아래의 넓이를 나타냅니다. 그렇기 때문에 AUC를 알아보기 위해서 ROC 곡선이 무엇인지 알아보겠습니다.
+
+**ROC 곡선(Receiver Operation Characteristic Curve)**은 2차대전 때 통신 장비의 성능을 평가하기 위해서 나온 수치입니다. ROC곡선은 FPR(False Positive rate)을 X축으로  TPR(True Positive rate)의 그래프입니다. FPR과 TPR은 오차 행렬 내 4개의 요소를 사용한 수치이며 . 각 수치는 다음과 같이 구해집니다.
+
+
+$$
+\begin{aligned}
+\text{FPR} &= \frac{\text{FP}}{\text{FP+TN}} \\
+\text{TPR} &= \frac{\text{TP}}{\text{TP+FN}} = \text{Recall}
+\end{aligned}
+$$
+
+
+FPR은 실제 Negative 클래스인 인스턴스를 얼마나 잘못 분류했는지를 나타내는 수치입니다. 그리고 TPR, 즉 재현율은 실제 Positive인 클래스인 인스턴스를 얼마나 제대로 분류했는 지를 나타내는 수치입니다. 
+
+위에서 사용했던 스팸 메일의 예를 사용해 FPR과 TPR이 어떻게 구해지는지 알아보겠습니다.
+
+| 행(실제)/열(예측) | Positive | Negative | Metric    |
+| ----------------- | -------- | -------- | --------- |
+| Positive          | 5(TP)    | 45(FN)   | 0.1(TPR)  |
+| Negative          | 20(FP)   | 930(TN)  | 0.02(FPR) |
+
+
+$$
+\begin{aligned}
+\text{FPR} &= \frac{20}{20+930} \simeq 0.02 \\
+\text{TPR} &= \frac{5}{5+45} = 0.1
+\end{aligned}
+$$
+
+
+임계값(Threshold)을 변화시키면 FPR이 변하게 됩니다. 임계값을 매우 높게 하면 Positive로 판단하는 기준이 깐깐해지기 때문에 FP가 0이 되어 FPR이 0이 됩니다. 반대로 임계값을 매우 낮게 하면 Positive로 판단하는 기준이 낮아지기 때문에 TN이 0이 되어 FPR이 1이 됩니다. 이렇게 임계값에 따라 FPR을 0부터 1까지 변화시켜가며 그에 따라 TPR이 어떻게 변화하는지를 기록한 것이 ROC 곡선입니다. 아래는 ROC 곡선의 예시입니다.
+
+
+
+<img src="https://3qeqpr26caki16dnhd19sv6by6v-wpengine.netdna-ssl.com/wp-content/uploads/2018/08/ROC-Curve-Plot-for-a-No-Skill-Classifier-and-a-Logistic-Regression-Model.png" alt="roc_curve" style="zoom:50%;" />
+
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://machinelearningmastery.com/roc-curves-and-precision-recall-curves-for-classification-in-python/">machinelearningmastery.com</a></p>
+
+낮은 FPR, 즉 임계값이 높을 때에는 성능이 좋은 분류기에서만 높은 TPR이 나오게 됩니다. 임계값이 낮아지면 어떤 분류기라도 TRP이 높아지게 되므로 FPR이 증가함에 따라 TPR은 점점 1에 가까워지게 됩니다. 이렇게 그려진 ROC 곡선의 아랫부분의 면적을 구한 것이 AUC입니다. 그래서 더 좋은 분류기는 더 높은 AUC를 가지게 되지요. 아래는 여러 분류기의 ROC커브와 AUC를 비교한 것입니다. 완전 랜덤한 분류기는 붉은 점선과 같이 ROC곡선이 그려지기 때문에 AUC가 0이 되고, 완벽한 분류기는 언제나 TPR이 1이 되므로 AUC도 1이 되는 것을 볼 수 있습니다.
+
+![auc](https://glassboxmedicine.files.wordpress.com/2019/02/roc-curve-v2.png)
+
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://glassboxmedicine.com/2019/02/23/measuring-performance-auc-auroc/">glassboxmedicine.com</a></p>
+
+### 좋은 평가방법이란?
+
+머신러닝에 "공짜 점심은 없다"라는 말이 있습니다. 모든 상황에 최적화된 모델은 없다는 이야기지요. 어떤 데이터에서는 좋았던 알고리즘이 다른 데이터로 가면 성능이 떨어지는 일은 부지기수입니다. 평가방법 역시 그러합니다. AUC나 $F_1\text{-score}$ 처럼 범용적으로 사용되는 수치는 있으나 수치가 높았던 모델이 실제 데이터에서 어떤 작용을 할 지는 알 수 없습니다. 그렇기 때문에 많은 수치를 측정해보고 가장 적정한 평가방법이나 평균적으로 높게 평가되는 모델을 찾아서 하는 것이 좋은 방법이 되겠습니다.
