--- a/_posts/2020-05-01-val_eval.md
+++ b/_posts/2020-05-01-val_eval.md
@@ -223,13 +223,13 @@ $$
 
 
 
-<img src="https://3qeqpr26caki16dnhd19sv6by6v-wpengine.netdna-ssl.com/wp-content/uploads/2018/08/ROC-Curve-Plot-for-a-No-Skill-Classifier-and-a-Logistic-Regression-Model.png" alt="roc_curve" style="zoom:50%;" />
+<p align="center"><img src="https://3qeqpr26caki16dnhd19sv6by6v-wpengine.netdna-ssl.com/wp-content/uploads/2018/08/ROC-Curve-Plot-for-a-No-Skill-Classifier-and-a-Logistic-Regression-Model.png" alt="roc_curve" style="zoom:50%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://machinelearningmastery.com/roc-curves-and-precision-recall-curves-for-classification-in-python/">machinelearningmastery.com</a></p>
 
 낮은 FPR, 즉 임계값이 높을 때에는 성능이 좋은 분류기에서만 높은 TPR이 나오게 됩니다. 임계값이 낮아지면 어떤 분류기라도 TRP이 높아지게 되므로 FPR이 증가함에 따라 TPR은 점점 1에 가까워지게 됩니다. 이렇게 그려진 ROC 곡선의 아랫부분의 면적을 구한 것이 AUC입니다. 그래서 더 좋은 분류기는 더 높은 AUC를 가지게 되지요. 아래는 여러 분류기의 ROC커브와 AUC를 비교한 것입니다. 완전 랜덤한 분류기는 붉은 점선과 같이 ROC곡선이 그려지기 때문에 AUC가 0이 되고, 완벽한 분류기는 언제나 TPR이 1이 되므로 AUC도 1이 되는 것을 볼 수 있습니다.
 
-![auc](https://glassboxmedicine.files.wordpress.com/2019/02/roc-curve-v2.png)
+<p align="center"><img src="https://glassboxmedicine.files.wordpress.com/2019/02/roc-curve-v2.png" alt="auc"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://glassboxmedicine.com/2019/02/23/measuring-performance-auc-auroc/">glassboxmedicine.com</a></p>
 
