--- a/_posts/2020-07-06-bst.md
+++ b/_posts/2020-07-06-bst.md
@@ -1,5 +1,5 @@
 ---
-<p align="center">layout: post
+layout: post
 title: 이진 탐색 트리 (Binary Search Tree)
 category: Data Structure
 tag: Data Structure
@@ -7,7 +7,7 @@ tag: Data Structure
 
 
 
-본 게시물은 [카이스트 문일철 교수님의 강의](https://www.edwith.org/datastructure-2019s/lecture/40291/) 를 참조하여 작성하였습니다.
+본 게시물은 [문일철 교수님의 데이터 구조 및 분석](https://www.edwith.org/datastructure-2019s/lecture/40291/)을 참조하여 작성하였습니다.
 
 
 
