--- a/_posts/2020-06-03-nlp_glove.md
+++ b/_posts/2020-06-03-nlp_glove.md
@@ -15,7 +15,7 @@ tag: NLP
 
 [Word2Vec](https://yngie-c.github.io/nlp/2020/05/28/nlp_word2vec/)에게도 단점이 있습니다. 시퀀스 내에 자주 사용되는 단어가 있으면 그 단어에 대해서 너무 많이 계산한다는 것입니다. 특히 아래는 [위키피디아 - 대한민국](https://ko.wikipedia.org/wiki/대한민국)의 첫 문단을 약간의 전처리 후에 형태소 분석한 것입니다.
 
-> *['대한민국', '은', '동아시아', '의', '한반도', '남부', '에', '있', '는', '민주', '공화국', '이', '다', '서쪽', '으로', '는', '황해', '를', '사이', '에', '두', '고', '중화', '인민공화국', '이', '동쪽', '으로', '는', '동해', '를', '사이', '에', '두', '고', '일본', '이', '있', '으며', '북쪽', '으로', '는', '조선', '민주주의', '인민공화국', '과', '맞닿', '아', '있', '다', '대한민국', '의', '수도', '는', '서울', '특별시', '이', '고', '실질', '적', '행정', '수도', '는', '세종', '특별자치시', '이', '다', '국기', '는', '대한민국', '국기법', '에', '따라', '태극기', '국가', '는', '관습', '상', '애국가', '이', '다', '대한민국', '내', '에서', '는', '대한민국', '을', '간단히', '한국', '또는', '남한', '등', '으로', '도', '부른다', '조선', '민주주의', '인민공화국', '에서', '는', '남조선', '으로', '불린다', '대한민국', '은', '과거', '엔', '구한국', '대한제국', '과', '구별', '하', '여', '신', '한국', '이', '라고', '불리', '기', '도', '하', '였', '다', '연호', '는', '년', '월', '일', '부터', '서력기원', '을', '사용', '한다']*
+> *'대한민국', '은', '동아시아', '의', '한반도', '남부', '에', '있', '는', '민주', '공화국', '이', '다', '서쪽', '으로', '는', '황해', '를', '사이', '에', '두', '고', '중화', '인민공화국', '이', '동쪽', '으로', '는', '동해', '를', '사이', '에', '두', '고', '일본', '이', '있', '으며', '북쪽', '으로', '는', '조선', '민주주의', '인민공화국', '과', '맞닿', '아', '있', '다', '대한민국', '의', '수도', '는', '서울', '특별시', '이', '고', '실질', '적', '행정', '수도', '는', '세종', '특별자치시', '이', '다', '국기', '는', '대한민국', '국기법', '에', '따라', '태극기', '국가', '는', '관습', '상', '애국가', '이', '다', '대한민국', '내', '에서', '는', '대한민국', '을', '간단히', '한국', '또는', '남한', '등', '으로', '도', '부른다', '조선', '민주주의', '인민공화국', '에서', '는', '남조선', '으로', '불린다', '대한민국', '은', '과거', '엔', '구한국', '대한제국', '과', '구별', '하', '여', '신', '한국', '이', '라고', '불리', '기', '도', '하', '였', '다', '연호', '는', '년', '월', '일', '부터', '서력기원', '을', '사용', '한다'*
 
 위 문단에서 조사와 보조사인 *"은", "는", "이", "가", "을", "를"* 등은 등장 횟수가 많기 때문에 학습 과정에서 해당 단어 시퀀스를 중복하여 계산하게 됩니다. 위 문단은 길이가 길지 않지만, 문단에서 '는'을 타겟 단어로 하는 시퀀스의 확률을 계산한다면 $P(\text{민주}\vert\text{는}), P(\text{황해}\vert\text{는}), P(\text{동해}\vert\text{는}), P(\text{조선}\vert\text{는}), P(\text{서울}\vert\text{는})$ 등 굉장히 많이 계산하게 될 것입니다.
 
