--- a/_posts/2020-07-05-nlp_gpt.md
+++ b/_posts/2020-07-05-nlp_gpt.md
@@ -13,7 +13,7 @@ tag: NLP
 
 # GPT
 
-<img src="https://openai.com/content/images/2019/05/openai-cover.png" alt="openai" style="zoom: 25%;" />
+<p align="center"><img src="https://openai.com/content/images/2019/05/openai-cover.png" alt="openai" style="zoom: 25%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://openai.com/">openai.com</a></p>
 
