--- a/_posts/2020-04-26-SVM.md
+++ b/_posts/2020-04-26-SVM.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: SVM (Support Vector Machine)
+title: 서포트 벡터 머신 (SVM)
 category: Machine Learning
 tag: Machine-Learning
 ---
@@ -13,108 +13,151 @@ tag: Machine-Learning
 
 ## Decision Boundary
 
-결정 경계는 서포트 벡터 머신에서도 여전히 중요하다. 분류기의 성능을 결정하기 때문이다. 이전에 있던 나이브 베이즈 분류기와 로지스틱 회귀에서는 확률을 기반으로 결정 경계를 결정했다. 그러다 보니 분류만 제대로 된다면 어떤 결정 경계를 선택하더라도 문제가 되지 않았다. 예를 들면 아래 그림에 있는 3가지 결정 경계(파랑, 빨강, 초록) 중에서 결정 경계를 파랑으로 선택하든 빨강으로 선택하든 나이브 베이즈와 로지스틱 회귀에서는 별 문제가 되지 않는다. 그러나 언뜻 보기에도 파랑보다는 빨간색으로 결정 경계를 나누는 것이 더 나아 보인다. 
+아래에 3개의 분류기 $H_1, H_2, H_3$이 있습니다. 여러분은 3개 중 어떤 분류기가 가장 좋아보이시나요?
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Svm_separating_hyperplanes.png/1024px-Svm_separating_hyperplanes.png" alt="SVM_DeciBound" style="zoom: 33%;" />
+<p align="center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Svm_separating_hyperplanes.png/1024px-Svm_separating_hyperplanes.png" alt="svm" style="zoom: 40%;" /></p>
 
-<p align="center" style="font-size:80%">이미지 출처 : 위키백과</p>
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://ko.wikipedia.org/wiki/%EC%84%9C%ED%8F%AC%ED%8A%B8_%EB%B2%A1%ED%84%B0_%EB%A8%B8%EC%8B%A0">위키피디아 - 서포트 벡터 머신</a></p>
 
-**서포트 벡터 머신(Support Vector Machine, SVM)**은 위 그림에서의 빨간색으로 나타나는 결정 경계를 찾기 위한 방법이다. SVM이 결정 경계를 찾는 방식 다음과 같다. 먼저, 각 클래스에서 가장 앞(결정 경계 가까이)에 위치한 3개의 벡터를 찾는다. 3개를 선정하는 방법은 각 클래스에서 가장 앞에 있는 벡터를 하나씩 찾는다. 그 다음으로 앞에 위치한 벡터 하나를 클래스에 상관없이 찾는다. 이렇게 선정된 3개의 벡터 중 한 개 클래스에 속한 두 벡터를 찾아 그들을 잇는 하나의 직선을 긋는다. 다음으로 나머지 클래스에 위치한 하나의 벡터를 지나면서 이전 직선에 평행한 직선을 하나 더 긋는다. 마지막으로 평행선 위의 아무 점의 중점을 지나며 평행선과 평행한 하나의 직선을 그을 수 있는데 이 직선이 SVM의 결정 경계이다. 
+일단 $H_3$을 좋은 분류기라고 하기엔 무리가 있어 보입니다. 총 16개의 인스턴스 중 검은색 클래스인 인스턴스가 8개, 흰색 클래스인 인스턴스가 8개가 있는데 $H_3$은 8개의 검은색과 7개의 흰색을 하나의 클래스로 분류했습니다. 엔트로피(Entropy) 등의 지표를 사용하면 $H_3$이 좋지 않은 분류기임을 알 수 있습니다.
+
+그렇다면 $H_1$과 $H_2$ 중에서는 어떤 분류기가 더 좋은 분류기일까요? 주어진 인스턴스만으로는 두 분류기의 성능 비교를 할 수는 없습니다. 두 분류기 모두 각자의 클래스에 맞게 분류를 잘 해냈기 때문이지요. 그러나 언뜻 보기에는 $H_2$가 조금 더 좋아 보입니다. *"좋아 보이는 분류기의 비밀"*은 바로 **결정 경계(Decision boundary)**에 있습니다. 위 그래프에 새로운 인스턴스를 추가해보도록 하겠습니다.
+
+<img src="https://user-images.githubusercontent.com/45377884/91509354-f6f39e00-e914-11ea-92f4-49403b7a4bee.png" alt="svm_add_data" style="zoom:40%;" />
+
+4개의 인스턴스가 추가되었습니다. 이 4개의 인스턴스는 $H_1, H_2$ 중 어떤 분류기를 사용하여 분류하는 지에 따라서 클래스가 달라집니다. 하지만 언뜻 보아도 위쪽 2개의 인스턴스는 검은색 클래스에, 아래쪽 2개의 인스턴스는 흰색 클래스에 더 가까워 보입니다. 인스턴스의 클래스가 실제로도 위쪽 2개는 검은색 클래스, 아래쪽 2개는 흰색 클래스라고 해보겠습니다. 아래는 이를 표시한 그림입니다.
+
+<img src="https://user-images.githubusercontent.com/45377884/91509351-f4914400-e914-11ea-94f2-55003467d642.png" alt="svm_add_data1" style="zoom:40%;" />
+
+이제는 $H_2$분류기와 $H_1$중 어느 분류기가 더 좋은지 알 수 있게 되었습니다. 세 개의 분류기 중 모든 인스턴스를 잘 분류하고 있는 것은 $H_2$뿐입니다. 
+
+## SVM
+
+**서포트 벡터 머신(Support Vector Machine, SVM)**은 위 그림에서 빨간색으로 나타나는 분류기 $H_2$를 찾기 위한 알고리즘 입니다.
+
+서포트 벡터 머신이 결정 경계를 찾는 방식은 다음과 같습니다. 먼저, 각 클래스에서 앞쪽(상대 클래스와 가까운 쪽)에 위치한 3개의 벡터를 찾습니다. 3개의 벡터를 선정하는 방법은 다음과 같습니다. 먼저, 각 클래스에서 가장 앞에 있는 벡터를 하나씩 찾습니다. 나머지 하나의 벡터는 클래스에 상관없이 가장 앞쪽에 위치한 것으로 찾습니다.
+
+3개의 벡터를 찾으면 같은 클래스에 속해 있는 2개의 벡터를 찾아 이를 연결하는 하나의 직선을 긋습니다. 다음으로 이 직선과 평행하면서 나머지 하나의 벡터를 지나는 직선을 긋습니다. 마지막으로 평행선의 중점을 지나며 평행선과 평행한 하나의 직선을 더 그을 수 있는데 이 직선이 서포트 벡터 머신의 결정 경계입니다. 결정 경계를 찾는 데에 벡터의 도움을 받기 때문에 서포트 벡터 머신이라는 이름이 붙었습니다. 아래는 이렇게 구해진 서포트 벡터 머신의 결정 경계를 표시한 것입니다.
+
+ 
 
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Svm_max_sep_hyperplane_with_margin.png" alt="SVM_DB2" style="zoom:40%;" />
 
-<p align="center" style="font-size:80%">이미지 출처 : 위키백과</p>
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://ko.wikipedia.org/wiki/%EC%84%9C%ED%8F%AC%ED%8A%B8_%EB%B2%A1%ED%84%B0_%EB%A8%B8%EC%8B%A0">위키피디아 - 서포트 벡터 머신</a></p>
 
 ## Margin
 
-이렇게 결정된 결정 경계에서 양쪽 직선까지의 거리를 **Margin(마진)** 이라고 한다. 결정 경계는 위 그림에서 볼 수 있듯 $\mathbf{w} \cdot \mathbf{x} + b = 0$ 으로 나타낼 수 있다. 새로운 데이터가 들어올 경우 결정 경계를 기준으로 $\mathbf{w} \cdot \mathbf{x} + b > 0$ 인지 $\mathbf{w} \cdot \mathbf{x} + b < 0$ 인지에 따라서 클래스를 결정한다. 위 그림에서는 $\mathbf{w} \cdot \mathbf{x} + b > 0$ 이면 검은색으로 분류되고 $\mathbf{w} \cdot \mathbf{x} + b < 0$ 이면 흰색으로 분류된다.
+이렇게 결정된 결정 경계(실선)로부터 양쪽 직선(점선)까지의 거리를 **마진(Margin)**이라고 합니다. 결정 경계는 위 그림에서 볼 수 있듯 $\mathbf{w} \cdot \mathbf{x} + b = 0$으로 나타냅니다. 새로운 데이터가 들어올 경우에는 결정 경계를 기준으로 $\mathbf{w} \cdot \mathbf{x} + b > 0$ 인지 $\mathbf{w} \cdot \mathbf{x} + b > 0$ 인지에 따라서 클래스를 결정합니다. 위 그림에서는 $\mathbf{w} \cdot \mathbf{x} + b > 0$ 이면 검은색 클래스로 분류되고, $\mathbf{w} \cdot \mathbf{x} + b < 0$이면 흰색 클래스로 분류됩니다.
 
-$\mathbf{w} \cdot \mathbf{x} + b > 0$ 인 경우를 Positive case $y_i (> 0)$ , $\mathbf{w} \cdot \mathbf{x} + b < 0$ 인 경우를 Negative case $y_i (< 0)$ 라고 하자. 이 때 $(\mathbf{w} \cdot \mathbf{x} + b) y_i$를 신뢰도(Confidence level)라고 하며 이 신뢰도를 최대화 하는 것이 SVM에서 우리의 목표가 된다. 신뢰도에서 $y_i$ 값은 어떤 결정 경계를 택하더라도 변화가 없으므로 $\mathbf{w} \cdot \mathbf{x} + b$ 으로 나타나는 마진을 최대화하는 것이 중요하다. 결정 경계 위에 있는 점을 $x_p$ 라 하면 임의의 점 $x$ 는 거리 $r$ 을 사용하여 다음과 같이 나타낼 수 있다.
+$\mathbf{w} \cdot \mathbf{x} + b > 0$ 인 경우를 Positive case라고 하고 $\mathbf{w} \cdot \mathbf{x} + b < 0$ 인 경우를 Negative case라고 하겠습니다. 그리고 각자의 인스턴스의 실제 클래스는 $y_i$라고 하겠습니다. 이제 신뢰도(Confidence level) $(\mathbf{w} \cdot \mathbf{x} + b)y_i$을 구할 수 있습니다. 이 신뢰도를 최대화하는 것이 서포트 벡터 머신의 목표가 됩니다.
+
+
+$$
+\text{argmax} \sum_i (\mathbf{w} \cdot \mathbf{x} + b)y_i
+$$
+
+
+신뢰도에서 $y_i$값은 실제 클래스이므로 어떤 결정 경계를 택하더라도 변화가 없습니다. 그렇기 때문에 $\mathbf{w} \cdot \mathbf{x} + b$에 해당하는 마진을 최대화하는 것이 중요합니다. 결정 경계 위에 있는 인스턴스를 $x_p$라고 하면 임의의 인스턴스 $x$는 거리 $r$을 사용하여 다음과 같이 나타낼 수 있습니다.
 
  
 
 $$
-x = x_p + r \frac{w}{||w||}, f(x_p) = 0
+x = x_p + r \frac{w}{\Vert w\Vert}
 $$
 
 
 
-이를 사용하여 다시 $f(x)$ 를 나타내면 아래와 같고 이를 r에 대한 식으로 정리할 수 있다. 
+$f(\mathbf{x}) = \mathbf{w} \cdot \mathbf{x} + b$이면 $f(x_p) = 0$이므로 위 식을 이용하여 $r$에 대한 식으로 정리할 수 있습니다.
 
 
 
 $$
-f(x) = w \cdot x + b = w \cdot (x_p + r \frac{w}{||w||}) + b = wx_p + b + r\frac{w \cdot w}{||w||} \\
-\because wx_p + b = 0, \quad f(x) = r\frac{w \cdot w}{||w||} = r\frac{||w||^2}{||w||} = r ||w|| \\
-\therefore r = \frac{f(x)}{||w||}
+f(x) = w \cdot x + b = w \cdot (x_p + r \frac{w}{\Vert w \Vert}) + b = wx_p + b + r\frac{w \cdot w}{\Vert w\Vert} \\
+\because wx_p + b = 0, \quad f(x) = r\frac{w \cdot w}{\Vert w\Vert} = r\frac{\Vert w\Vert^2}{\Vert w\Vert} = r \Vert w\Vert \\
+\therefore r = \frac{f(x)}{\Vert w\Vert}
 $$
 
 
 
-좋은 결정 경계를 위해서는 Margin( $r$ ) 을 최대로 늘려야 하는데 이를 식으로 나타내면 다음과 같다. 첫 번째 식에서 $a$ 는 임의의 상수이므로 이를 일반화하여 1로 나타내고 $||w||$ 에 대한 식으로 정리하면 두 번째 식처럼 나타낼 수 있다.
+좋은 결정 경계를 위해서는 마진, 즉 서포트 벡터 까지의 거리 $r$을 최대로 늘려야 합니다. 서포트 벡터 $x_s$에 대해서 $f(x_s) = w\cdot x_s + b = 1$이므로 거리 $r_s$를 아래와 같이 나타낼 수 있습니다.
+
+
+$$
+r_s = \frac{1}{\Vert w \Vert}
+$$
+
+
+즉, $r_s$ 최대로 하는 $w, b$는 $\Vert w \Vert$ 를 최소로하는 $w, b$와 같게 됩니다. 이를 수식으로 정리하면 다음과 같이 나타낼 수 있습니다.
 
 
 
 $$
-\max_{w,b} 2r = \frac{2a}{||w||} \qquad s.t. (wx_j + b)y_j \geq a \\
-\min_{w,b} ||w|| \qquad s.t. (wx_j + b)y_j \geq 1
+\max_{w,b} 2r = \max_{w,b}\frac{2}{\Vert w\Vert} = \min_{w,b} \Vert w\Vert \qquad s.t. (wx_j + b)y_j \geq 1
 $$
 
 
 
-위에서 $||w||$ 를 최소화 하는 것은 Quadratic optimization이다. Linear programming, Quadratic programming에 대한 자료는 [Wikidocs : 모두를 위한 컨벡스 최적화](https://wikidocs.net/17852) 를 참고하면 좋다.
-
-
-
-# Error Handling
+위에서 $\Vert w \Vert$를 최소화하는 하는 방향으로 최적화를 진행합니다.
 
 ## Losses
 
+항상 모든 데이터를 두 쪽으로 분류할 수 있는 것은 아닙니다. 훈련 데이터가 아래와 같이 주어져 있다고 해보겠습니다.
+
 <img src="https://www.researchgate.net/profile/Marimuthu_Palaniswami/publication/220606206/figure/fig2/AS:339477512900611@1457949154899/The-soft-margin-SVM-classifier-with-slack-variables-x-and-support-vectors-shown.png" alt="soft_SVM" style="zoom:80%;" />
 
-<p align="center" style="font-size:80%">이미지 출처 : Researchgate</p>
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.researchgate.net/figure/The-soft-margin-SVM-classifier-with-slack-variables-x-and-support-vectors-shown_fig2_220606206">researchgate.net</a></p>
 
-위 그림처럼 직선으로 결정 경계를 나누기 어려운 경우도 있다. 실선으로 나타낸 결정 경계는 빨강 클래스 사이에 위치한 파랑 클래스 데이터를 잘못 분류하게 된다. 이 경우에 에러를 처리하는 방법은 크게 두 가지다. 첫 번째는 Error case에 벌칙을 주는(Panelization) 방법이다. 이 경우 에러와 관련된 항을 식에 추가해 준다. 두 번째는 non-linear한 결정 경계를 긋는 방법이다. 먼저 첫 번째(에러를 식에 포함하여 처리하는) 방법에 대해 알아보도록 하자.
+위 그림에서는 Class2(빨간색 세모)의 가장 앞쪽 벡터의 뒤쪽에 Class1인 인스턴스가 위치해 있습니다. 실선으로 나타낸 결정 경계는 이 인스턴스를 잘못 분류하게 됩니다. 데이터가 이렇게 주어질 경우 인스턴스를 처리하는 방법은 크게 두 가지가 있습니다.
 
-에러를 처리하는 방법에도 두 가지 방법이 있다. 첫 번째는 발생하는 에러 데이터의 개수를 세는 방법이다. 이를 식으로 나타내면 아래와 같다. 이 때 계산되는 Loss $\#_{error}$ 를 0-1 Loss 라고 한다.
+첫 번째는 분류기를 벗어나는 Error case에 벌칙을 주는(Penalization) 방법입니다. 관련 내용은 [정칙화(Regularization)](https://yngie-c.github.io/machine learning/2020/04/30/training_test_reg/)에서도 볼 수 있습니다. 두 번째는 비선형(Non-linear) 결정 경계를 긋는 방법입니다. 먼저 첫 번째 방법에 대해서 알아보도록 하겠습니다.
 
-
-
-$$
-\min_{w,b} ||w|| + C \times \#_{error} \quad s.t.(wx_j + b) \geq 1
-$$
-
-
-
-두 번째 방법은 Hinge Loss를 사용하는 것이다. 이를 나타내는 새로운 파라미터 $\xi_i$ 가 등장한다. Hinge Loss $(\xi_i)$ 는 원래 클래스의 최전선까지는 0이며 이를 지나면 서서히 증가한다. 결정 경계를 지날 때 $\xi_i = 1$ 이며 거리가 멀어질 수록 두 점((원래 클래스의 최전선, 0), (결정 경계, 1))을 잇는 직선을 따라 서서히 증가한다. 두 번째 방법을 식으로 나타내면 다음과 같다.
+ Error case에 벌칙을 주는 기준에 따라 두 가지로 나눌 수 있습니다. 먼저, Error case에 해당하는 인스턴스의 개수를 기준으로 벌칙을 가하는 방법입니다. 이렇게 에러의 개수에 해당하는 $\#_\text{error}$를 0-1​ 손실(Loss)라고 합니다. 목적함수의 식을 아래 처럼 나타낼 수 있습니다.
 
 
 
 $$
-\min_{w,b} ||w|| + C \sum_j \xi_j \quad s.t.(wx_j + b) \geq 1 - \xi_j
+\min_{w,b} \Vert w\Vert + C \times \#_{error} \quad s.t.(wx_j + b) \geq 1
 $$
 
 
 
-실제로는 두 방법 중 아래 방법을 더 많이 사용한다. 0-1 Loss는 Quadratic으로 구현하기 어려우며 에러 케이스의 에러 정도를 반영하지 못하기 때문이다. 그리고 각 식에서 $C$ 라는 하이퍼 파라미터가 등장한다. 
+멀리 떨어진 Error case 인스턴스에 더 강한 벌칙을 가하는 방법도 있습니다. 이렇게 멀리 떨어진 가중치를 가하여 구하는 손실을 힌지 손실(Hinge Loss)라 하고 $\xi_i$로 나타냅니다. 힌지 손실은 동일 클래스의 서포트 벡터에서 $0$이며 결정 경계에서는 $1$이 됩니다. 결정 경계에서 반대 클래스 쪽으로 거리가 멀어질수록 선형적으로 증가합니다. 이 방법을 다음과 같이 나타낼 수 있습니다.
+
+
+
+$$
+\min_{w,b} \Vert w\Vert + C \sum_j \xi_j \quad s.t.(wx_j + b) \geq 1 - \xi_j
+$$
+
+ 
+
+아래는 0-1 손실(초록색 실선)과 힌지 손실(파란색 실선)을 나타낸 것입니다.
+
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b5/Hinge_loss_vs_zero_one_loss.svg/1280px-Hinge_loss_vs_zero_one_loss.svg.png" alt="losses" style="zoom: 33%;" />
+
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://en.wikipedia.org/wiki/Hinge_loss">wikipedia - Hinge loss</a></p>
+
+실제로는 두 번째 방법을 더 많이 사용합니다. 0-1 손실은 Quadratic으로 구현하기 어려우며 Error의 정도를 반영하지 못하기 때문입니다. 
 
 
 
 ## Soft Margin SVM
 
-이렇게 에러를 고려하는 SVM 모델을 Soft margin SVM 이라고 한다. 반대로 하나의 오차도 허용하지 않는 모델을 Hard margin SVM이라고 한다. 아래 그림을 보면 둘의 차이를 구분할 수 있다.
+이렇게 에러를 고려하는 서포트 벡터 머신 모델을 소프트 마진 서포트 벡터 머신(Soft margin SVM)이라고 합니다. 반대로 하나의 오차도 허용하지 않는 모델을 하드 마진 서포트 벡터 머신(Hard margin SVM)이라고 합니다. 아래 그림을 보며 둘의 차이를 알아보겠습니다.
 
 ![](https://miro.medium.com/max/1104/1*CD08yESKvYgyM7pJhCnQeQ.png)
 
-<p align="center" style="font-size:80%">이미지 출처 : <a herf="https://medium.com/@ankitnitjsr13/math-behind-svm-support-vector-machine-864e58977fdb">Medium</a></p>
+<p align="center" style="font-size:80%">이미지 출처 : <a herf="https://medium.com/@ankitnitjsr13/math-behind-svm-support-vector-machine-864e58977fdb">medium.com</a></p>
 
-꼭 한 클래스의 데이터가 다른 클래스 데이터 사이에 들어가 있지 않은 경우에도 Soft margin SVM을 사용해볼 수 있다. 이 경우에는 에러에 대해 Robust 하다는 점에서 Soft margin SVM의 특징을 찾을 수 있다. 아래의 왼쪽과 오른쪽 그림은 데이터를 각각 Soft margin SVM 과 Hard margin SVM 으로 분류한 것이다.
+꼭 한 클래스의 데이터가 다른 클래스 데이터 사이에 들어가 있지 않더라도 소프트 마진 서포트 벡터 머신을 사용할 수 있습니다. 이 경우에 소프트 마진 서포트 벡터 머신은 에러에 대해 강건(Robust)하다는 장점이 있습니다. 아래의 왼쪽과 오른쪽 그림은 데이터를 소프트 마진 서포트 벡터 머신과 하드 마진 서포트 벡터 머신으로 분류했을 때를 그림으로 나타낸 것입니다.
 
-![](https://miro.medium.com/max/898/1*A3MIALgW3xdCGuuLNqpCEA.png)
+![hard_vs_soft](https://qph.fs.quoracdn.net/main-qimg-0a3e8d1f008e7e86c10efe9936ead943.webp)
 
-<p align="center" style="font-size:80%">이미지 출처 : <a herf="https://medium.com/@ankitnitjsr13/math-behind-svm-support-vector-machine-864e58977fdb">Medium</a></p>
+<p align="center" style="font-size:80%">이미지 출처 : <a herf="https://www.quora.com/What-are-the-objective-functions-of-hard-margin-and-soft-margin-SVM">quora.com</a></p>
 
-다시 Soft margin SVM의 Loss function으로 돌아가보자. Hinge loss를 사용하는 Soft margin SVM의 Loss function은 아래와 같다.
+오른쪽 하드 마진 소프트벡터 머신은 한 개의 인스턴스도 빠뜨리지 않고 서포트 벡터 후보에  포함시키기 때문에 마진이 작은 결정 경계를 형성하게 됩니다. 반대로 소프트 마진을 적용하면 발생한 에러 하나를 무시하고 더 넓은 마진을 가지는 결정 경계를 선택한 것을 볼 수 있습니다.
+
+소프트 마진 서포트 벡터 머신의 손실 함수를 조정하면 에러를 얼마나 고려해 줄 지를 결정할 수 있습니다. $C$ 하미퍼파라미터를 조정하여 이를 조정합니다. 위에서 사용했던 힌지 손실을 사용한 손실 함수 수식을 다시 가져와 보겠습니다.
 
 
 
@@ -124,86 +167,24 @@ $$
 
 
 
-이 식에서 하이퍼 파라미터 $C$ 값이 커지면 커질수록 $\xi_j$ , 즉 Error term 이 확대된다. 즉 C가 크면 클수록 Error에 대한 Panelty가 더욱 크게 나타나며 모델이 에러를 발생시키지 않는 방향으로 생성된다. 아래 그림은 $C=1000 , C=10, C=0.1$ 일 때의 결정 경계를 보여주고 있다. 얼핏 보면 C가 늘어날수록 올바른 결정 경계가 생기는 것처럼 보이지만 항상 그런 것은 아니니 여러 $C$ 값에 의해서 생성되는 모델들을 잘 비교해야 한다. 
+하이퍼파라미터 $C$가 커지면 커질수록 힌지 손실 값 $\xi_i$ 에 대하여 더 많은 벌칙을 가하게 됩니다. 그렇기 때문에 하나의 Error case도 허용하지 않기 위해 굉장히 마진이 좁은 결정 경계를 형성하게 되지요. 반대로 $C$가 줄어들면 Error case에 대한 벌칙이 줄어들기 때문에, Error에 강건한 결정 경계를 형성하게 됩니다. 아래는 $C$ 가 각각 $1000, 10, 0.1$로 설정한 소프트 마진 서포트 벡터 머신의 결정 경계입니다.
 
-![](https://i.stack.imgur.com/8va0T.png)
+얼핏 보면 주어진 데이터에서는 $C$가 늘어날수록 올바른 결정 경계가 형성되는 것처럼 보입니다. 하지만 항상 그런 것은 아니기 때문에 $C$값을 조정해가며 생성되는 모델을 잘 비교한 뒤에 모델을 선택해야 합니다.
 
-<p align="center" style="font-size:80%">이미지 출처 : <a herf="https://datascience.stackexchange.com/questions/5717/where-is-the-cost-parameter-c-in-the-rbf-kernel-in-svm">Stackexchange</a></p>
+![hyperpara_C](https://i.stack.imgur.com/0aYO8.png)
+
+<p align="center" style="font-size:80%">이미지 출처 : <a herf="https://stackoverflow.com/questions/4629505/svm-hard-or-soft-margins">stackoverflow.com</a></p>
 
 
 
 # Kernal Trick
 
-이번에는 non-linear한 결정 경계를 만드는 방법에 대해서 알아보자. 에러를 허용하는 분류기 모델은 하나의 대안일 뿐 데이터를 잘 표현하는 모델이 될 수는 없다. 이런 경우 데이터의 차원을 확장하면 non-linear한 데이터를 나타낼 수 있다. 차원을 높이는 기본적인 아이디어는 선형 회귀 모델에서 보았던 Polynomial regression(다항 회귀) 모델에서  비슷하다. 특성끼리 곱한 것을 새로운 특성으로 만들어 줌으로서 데이터셋의 차원을 높일 수 있다.
+에러를 허용하는 분류기 모델은 하나의 대안일 뿐 데이터를 잘 분류하는 분류기라고는 할 수 없습니다. 이럴 때에는 SVM의 특정 방법을 사용하여 비선형(Non-linear) 결정 경계를 그려 분류하게 됩니다.
 
-하지만 SVM에서는 이렇게 마구잡이로 차원을 늘리는 방법을 사용하면 너무 많은 컴퓨팅 자원을 필요로 하게 된다. 이럴 때 사용하는 것이 커널 트릭(Kernel Trick) 이다. 커널 트릭을 사용하면 계산량을 늘리지 않고도 Non-linear한 결정 경계를 그려낼 수 있다.
+<img src="https://www.researchgate.net/profile/Yuh-Jye_Lee/publication/228444578/figure/fig1/AS:669961118826507@1536742586812/The-illustration-of-nonlinear-SVM.png" alt="non-linear" style="zoom: 67%;" />
 
-## Kernel Trick
+<p align="center" style="font-size:80%">이미지 출처 : <a herf="https://www.researchgate.net/figure/The-illustration-of-nonlinear-SVM_fig1_228444578">researchgate.net</a></p>
 
-이전에도 이야기 했듯 SVM 분류기를 만드는 문제는 Constrained Quadratic Programming 이다. 주어진 Convex 문제에 대해서 Lower Bound를 찾는 Duality를 사용한다. Duality에 대한 설명은 [Wikidocs : 모두를 위한 컨벡스 최적화](https://wikidocs.net/19932) 와 [Ratsgo님 블로그](https://ratsgo.github.io/convex optimization/2018/01/25/duality/) 에서 살펴볼 수 있다. 우리의 문제는 Constrained optimization(조건부 최적화) 이므로 다음과 같은 조건을 가지는 $g(x), h(x)$ 에 따라서 **라그랑주법(Lagrange method)** 을 적용할 수 있다.
+기본적인 아이디어는 차원을 확장하여 두 데이터를 완전히 분류하는 방법과 동일합니다. 이런 방법은 선형 회귀에서 보았던 다항 회귀(Polynomial regression)와도 비슷하다고 할 수 있습니다.
 
-
-
-$$
-\min_x f(x) \qquad s.t. \quad g(x) \leq 0 , h(x) = 0 \\
-\text{Lagrange Prime Function : } L(x, \alpha, \beta) = f(x) + \alpha g(x) + \beta h(x) \qquad \\
-\text{Lagrange Multiplier : } \alpha \geq 0, \beta \qquad \qquad \qquad \qquad \qquad \qquad \qquad \qquad \\
-\text{Lagrange Dual Function : } d(\alpha, \beta) = \inf_{x \in X} L(x, \alpha, \beta) = \min_x L(x, \alpha, \beta) \\
-\max_{\alpha \geq 0, \beta} L(x, \alpha, \beta) = \begin{cases} f(x) : \text{if x is feasible} \\ \infty : \text{otherwise} \end{cases} \\
-\therefore \min_x f(x) \rightarrow \min_x\max_{\alpha \geq 0, \beta} L(x, \alpha, \beta)
-$$
-
-
-$$
-\text{Primal Problem : } \min_x f(x) \quad s.t. g(x) \leq 0, h(x) = 0 \rightarrow \min_x \max_{\alpha \geq 0, \beta} L(x, \alpha, \beta) \\
-\text{Lagrange Dual Problem : } \max_{\alpha \geq 0, \beta} d(\alpha, \beta) \quad s.t. \alpha > 0 \rightarrow \max_{\alpha \geq 0, \beta} \min_x L(x, \alpha, \beta)
-$$
-
-
-Duality theorem(쌍대성 이론) 중에서 Strong duality는 KKT(Karush-Kunh-Tucker) 조건을 만족할 때 Primal과 Dual problem이 같다고 나타난다는 이론이다. KKT 조건은 그 아래 제시되어 있다.
-
-
-$$
-d^* = \max_{\alpha \geq 0, \beta} \min_x L(x, \alpha, \beta) = \min_x \max_{\alpha \geq 0, \beta} L(x, \alpha, \beta) = p^* \\
-\text{KKT Condition} : \nabla L(x^*,\alpha^*,\beta^*) = 0, \alpha^*=0, g(x^*) \leq 0, h(x^*) = 0, \alpha^*g(x^*) = 0
-$$
-
-
-## Dual Problem of SVM
-
-원래의 SVM 식으로 다시 돌아와보자.
-
-
-$$
-\min_{w,b} ||w|| \qquad s.t. (wx_j + b)y_j \geq 1
-$$
-
-
-이에 $L(w, b, \alpha) = \frac{1}{2}w \cdot w - \sum_j \alpha_j[(wx_j + b)y_j -1]$ 임을 이용하여 Primal Problem 식으로 만들면 다음과 같이 나타낼 수 있다.
-
-
-$$
-\min_{w,b} \max_{\alpha \geq 0, \beta} \frac{1}{2}w \cdot w - \sum_j \alpha_j[(wx_j + b)y_j -1]
-$$
-
-
-이 Primal 문제를 Dual problem으로 바꿔줄 수 있다. 아래는 Dual problem으로 바꾸어준 SVM의 목적식이고 그 아래는 이 때의 KKT 조건을 나타낸 것이다.
-
-
-$$
-\max_{\alpha \geq 0} \min_{w,b} \frac{1}{2}w \cdot w - \sum_j \alpha_j[(wx_j + b)y_j -1] \\
-\frac{\partial w,b, \alpha}{\partial w} = 0 , \frac{\partial w,b, \alpha}{\partial b} = 0, \alpha_i \geq 0, \alpha_j((wx_j + b)y_j -1) = 0
-$$
-
-
-이제 $L(w, b, \alpha)$ 을 전개하여 나타내보자.
-
-
-$$
-L(w, b, \alpha) = \frac{1}{2}w \cdot w - \sum_j \alpha_j[(wx_j + b)y_j -1] \qquad \qquad \qquad \qquad \quad \\
-= \frac{1}{2}w \cdot w - \sum_j \alpha_jy_jwx_j - b \sum_j a_jy_j + \sum_j \alpha_j \\
-= \sum_j \alpha_j - \frac{1}{2}\sum_i\sum_j\alpha_i\alpha_j y_i y_j x_i x_j \qquad \qquad \quad
-$$
-
-
-이렇게 다시금 Quadratic Programming 문제가 되었다. (아 커널 핸즈온에 이어서 두번째로 보는데 다시 공부해도 어렵다. 컨벡스 최적화랑 쌍대성 자세히 보고 다음에 다시 써야겠다)
+하지만 SVM에서는 마구잡이로 데이터의 차원을 늘리면 계산량이 급격히 증가하게 되어 학습 시간과 컴퓨팅 자원을 많이 소모하게 됩니다. 이런 문제를 해결하기 위해 등장한 것이 **커널 트릭(Kernel trick)**입니다. 커널 트릭을 사용하면 계산량을 늘리지 않고도 Non-linear한 결정 경계를 그려낼 수 있습니다.
