--- a/_posts/2020-02-19-LA3.md
+++ b/_posts/2020-02-19-LA3.md
@@ -19,7 +19,7 @@ tag: Linear-Algebra
 
 ## Solving Ax=0 & Ax=b
 
-[이전 게시물]([https://yngie-c.github.io/linear%20algebra/2020/02/18/LA2/](https://yngie-c.github.io/linear algebra/2020/02/18/LA2/)) 에서는 가우스 소거법을 이용해서 정방행렬 $A$ 로 나타나는 연립방정식의 해를 구해보았다. 이번에는 $A_{m \times n} & (단, m < n)$ 인 $A$ 에 대해 $Ax=0$ 혹은 $Ax=b$ 를 풀어본다. 먼저 좀 더 간단해보이는 $Ax=0$ 을 풀어보자. 아래 예시는 3행(식이 3개) 4열(미지수가 4개)인 연립방정식이다.
+[이전 게시물]([https://yngie-c.github.io/linear%20algebra/2020/02/18/LA2/](https://yngie-c.github.io/linear algebra/2020/02/18/LA2/)) 에서는 가우스 소거법을 이용해서 정방행렬 $A$ 로 나타나는 연립방정식의 해를 구해보았다. 이번에는 $A_{m \times n} \& (단 , m < n)$ 인 $A$ 에 대해 $Ax=0$ 혹은 $Ax=b$ 를 풀어본다. 먼저 좀 더 간단해보이는 $Ax=0$ 을 풀어보자. 아래 예시는 3행(식이 3개) 4열(미지수가 4개)인 연립방정식이다.
 
 
 $$
