--- a/_posts/2020-02-18-LA2.md
+++ b/_posts/2020-02-18-LA2.md
@@ -11,52 +11,67 @@ tag: Linear-Algebra
 
 # Gaussian Elimination
 
-## 선형 연립방정식
-
-다음과 같은 연립방정식이 있다고 하자. 중학교 때 연립방정식을 푸는 2가지 방법에 대해 배웠다. 한 미지수의 계수를 맞추어 준 뒤 서로 빼주어 소거하는 가감법, 하나의 미지수에 대한 식으로 표현한 뒤 나머지 식에 대입하는 대입법.
+이번 시간에는 선형 연립방정식의 해를 구하는 **가우스 소거법(Gaussian elimination)**에 대해서 알아보겠습니다. 사실 가우스 소거법을 몰라도 연립방정식의 해는 구할 수 있습니다. 가장 간단한 형태의 연립방정식을 예로 들어보겠습니다.
 
 
 $$
-\begin{cases} x + 2y = 3\\ 4x + 5y = 6 \end{cases} \\
-x = -1, y = 2
+\begin{cases}\begin{aligned}
+x + 2y = 3 \qquad \cdots \enclose{circle}{1}\\
+4x + 5y = 6 \qquad\cdots \enclose{circle}{2}
+\end{aligned}\end{cases}
 $$
 
 
+위 식에서 $x, y$의 해는 중등 과정에서 배운 가감법과 대입법을 통해서도 구할 수 있습니다. 가감법을 사용하려면 $\enclose{circle}{1} \times 4 - \enclose{circle}{2}$ 를 해주어 $y=2$ 를 구하고 이를 아무 식에나 대입하여 $x=-1$ 을 구합니다. 대입법을 사용하려면 식 $\enclose{circle}{1}$ 을 $x = 3-2y$ 처럼 한 문자에 대하여 정리한 뒤에 $\enclose{circle}{2}$ 에 식을 대입하여 $y=2$ 를 구하고 이를 아무 식에나 대입하여 $x=-1$ 을 구합니다.
 
-가감법이든 대입법이든 중등 교육과정에서 우리는 연립방정식을 두(혹은 N개) 직선의 교점을 구하는 것으로 배웠다. 연립방정식을 N개 직선의 교점(Intersection)을 구하는 것으로 바라보는 관점을 **Row form** 이라고 한다. Row form 말고도 하나의 관점이 더 있다. 이름을 맞추는데 성공하신 분도 있을 것이다. 다른 관점의 이름은 **Column form** 이다. Column form 에서는 두(혹은 N개) 벡터의 조합(linear combination of column vectors)으로 연립방정식을 바라본다.
+둘 중 어느 방법을 사용하든 이 방법은 $x + 2y = 3$ 과 $4x + 5y = 6$ 의 두 직선의 교점을 구하는 관점에서 풀고 있습니다. 만약 미지수의 개수가 3개로 늘어난다면 평면의 교선을 구하는 관점에서 풀게 되지요. 하지만 선형대수학에서 연립방정식의 풀이를 이런 관점으로 바라보는 것이 좋은 방법은 아닙니다. 이런 관점에서는 미지수와 식의 개수가 늘어날수록 직선, 평면 혹은 그 이상의 초평면이 식의 개수만큼 만나는(Intersect) 공간을 상상해야 합니다. 하지만 사람의 머리로 3차원 이상을 상상하기란 쉬운 일이 아닙니다.
 
-당장은 두 관점의 장단점이 눈에 띄지 않는다. 오히려 Row form이 익숙하고 좋아보인다. 하지만 미지수와 식의 개수가 늘어날수록 Row form에서의 교점(Intersection, 혹은 교차하는 부분)을 상상하기가 어렵다. 머릿속에서 그려볼 수 있는 정도는 3차원인데, 그 3차원에서 서너개의 평면이 떠다니는 상상만으로도 머리가 아파오기 마련이다. 그래서 선형대수학에서는 **Column form** 을 사용한다. N개 벡터를 목표하는 지점까지 가는 조합을 찾는 것은 적어도 평면을 찾는 것보다는 상상하기 쉽기 때문이다. 즉, 고차원에서 해의 의미를 찾기 쉽기 때문에 Column form 을 사용하도록 한다.
+그래서 선형대수학에서는 다른 관점으로 연립방정식을 바라봅니다. 이 방식은 다음과 같습니다. 먼저, 미지수의 계수에 해당하는 열벡터를 만들어 이를 미지수만큼 스칼라곱하여 더합니다. 이 때, 등호 오른쪽 열벡터까지 다다르는 미지수의 조합을 찾습니다. 위에서 사용했던 예시를 벡터를 사용하여 나타내면 이렇게 바꾸어 볼 수 있습니다.
+
+
+$$
+\left[\begin{array}{c} 1 \\ 4 \end{array} \right]x + \left[\begin{array}{c} 2 \\ 5 \end{array} \right]y = \left[\begin{array}{c} 3 \\ 6 \end{array} \right]
+$$
+
+
+즉 벡터 $(1,4)^T$와 $(2,5)^T$를 각각 $x,y$ 배 해주어 곱합니다. 물론 이 방법도 벡터의 차원수가 높아지면 상상하기 어려운 것은 매한가지이지만, 만나는 부분을 찾는 것은 아니기에 조금 더 상상하기 쉽습니다. 그렇기 때문에 고차원의 벡터를 다루는 선형대수학에서는 보다 해의 의미를 찾기 쉬운 아래의 관점을 사용합니다.
 
 
 
 ## Gaussian Elimination
 
-이제는 좀 더 복잡한 식을 연립방정식을 풀어보도록 하자. 아래는 3개의 식으로 구성된 미지수 3개짜리 연립방정식이다. 
+가우스 소거법도 이런 방법을 사용하여 연립방정식을 푸는 방법입니다. 아래와 같이 미지수 3개와 식 3개로 구성된 연립방정식이 있습니다.
 
-
-$$
-\begin{cases} 2u + v + w = 5 \\ 4u - 6v = -2 \\ -2u + 7v + 2w = 9 \end{cases}
-$$
-
-
-
-연립방정식을 **Column form** 의 관점으로 보기로 했으니 우리가 할 것은 이를 행렬식으로 만들어주는 것이다. 위 식을 행렬로 나타내면 아래와 같이 표현할 수 있다.
-
+ 
 
 $$
-\left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 &2 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -2 \\ 9 \end{array} \right]
+\begin{cases} 2u + v + w = 5 \quad \cdots \enclose{circle}{1}\\ 4u - 6v = -2 \quad \cdots \enclose{circle}{2}\\ -2u + 7v + 2w = 9 \quad \cdots \enclose{circle}{3} \end{cases}
 $$
 
 
-우리가 할 것은 가장 왼쪽 행렬을 상삼각행렬(Upper Triangular Matrix, $U$ ,행렬의 대각을 기준으로 왼쪽 아래 성분이 모두 0인 행렬)로 만드는 것이다. 상삼각행렬을 만드는 아이디어는 간단하다. (다만 계산이 복잡하다) 먼저 첫 번째 식에 적절한 수를 곱한 뒤 더하거나 빼주어 나머지 식 1열의 성분을 0으로 만든다. 위 식에서는 첫 번째 식에 2를 곱해준 뒤 두 번째식에서 그것을 빼주면 2행 1열의 성분을 0으로 만들 수 있고, 첫 번째 식과 세 번째 식을 더해주면 3행 1열의 성분을 0으로 만들 수 있다. 이를 진행하면 다음과 같이 성분이 변한다. (계산을 할 때는 오른쪽 행렬에 대해서도 모두 해주어야 한다)
+
+연립방정식을 각 벡터의 합으로 보기로 했으므로 이를 행렬식으로 만들어 보겠습니다. 위 식을 행렬로 나타내면 아래와 같이 나타낼 수 있습니다.
+
+
 
 
 $$
-\left[\begin{array}{ccc} 2 & 1 & 1 \\ 0 & -8 & -2 \\ 0 & 8 & 3 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -12 \\ 14 \end{array} \right]
+\left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 & 2 \end{array} \right]\left[\begin{array}{c} u \\ v \\ w \end{array} \right] = \left[\begin{array}{c} 5 \\ -2 \\ 9 \end{array} \right]
 $$
 
 
-그 다음으로 할 일도 같다. 이번에는 2번 째 식을 적절히 다루어 그 아래 식의 2열 성분을 모두 0으로 만든다. 예시에서는 2열과 3열의 성분을 더해주면 된다. 식이 3개보다 많아지더라도 이 과정을 계속해서 반복하는 것이 **가우스 소거법(Gaussian Elimination)** 이다.
+
+가우스 소거법은 가장 왼쪽 행렬을 **상삼각행렬(Uppert triangular matrix, $U$)로** 만드는 과정부터 시작합니다. 상삼각 행렬이란 행렬의 대각 성분(Diagonal elements)을 기준으로 왼쪽 아래 성분이 모두 $0$ 인 행렬입니다. 상삼각행렬을 만드는 방법은 가감법을 사용하여 연립방정식을 푸는 방법과 유사합니다. $\enclose{circle}{1}$ 번째 행에 적절한 수를 곱한 뒤 나머지 각 행과 더하거나 빼주어 각 1열의 성분을 0으로 만듭니다. 위 식에서는 $\enclose{circle}{1}$ 번째 행을 2배 해준 뒤에 $\enclose{circle}{2}$ 번째 행에서 이를 빼줌으로써 1열의 성분을 0으로 만들 수 있습니다. 마찬가지로 $\enclose{circle}{1}$ 번째 행에서 $\enclose{circle}{3}$ 번째 행을 더해주어 3행 1열의 성분도 0으로 만들 수 있습니다. 이 계산을 수행하면 아래와 같은 결과가 나오게 됩니다.
+
+
+$$
+\left[\begin{array}{ccc} 2 & 1 & 1 \\ 0 & -8 & -2 \\ 0 & 8 & 3 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{c} 5 \\ -12 \\ 14 \end{array} \right]
+$$
+
+
+
+다음에는 $\enclose{circle}{3}$ 번째 행 2열 성분을 0으로 만들어 줄 차례입니다. 위 행렬의 $\enclose{circle}{2}$ 번째 식과 $\enclose{circle}{3}$ 번째 식을 더해주면 아래와 같이 미지수 왼쪽에 있는 행렬을 상삼각행렬로 만들 수 있습니다.
+
 
 
 $$
@@ -64,14 +79,16 @@ $$
 $$
 
 
-이제 상삼각행렬을 만들었다. 여기서 대각 성분에 해당하는 $2, -8, 1$ 를 피봇(Pivot) 이라고 한다. 가우스 소거법 과정을 해나가면서 피봇 자리에 0이 나타날 경우는 아래에 있는 다른 행과 자리를 바꾸어 다시 소거를 진행해나가면 된다. 이 과정을 **피봇팅(Pivoting)** 이라고 한다. 예시처럼 모든 피봇이 0이 아니면 연립방정식에 **특정한 해(Unique Solution)** 가 존재한다. 반대로 그렇지 않은 연립방정식은 해가 없거나(No solution) 무한한 해(Infinite solution)를 가진다.
+
+이제는 모든 미지수의 값을 구할 수 있게 되었습니다. 마지막 행으로부터 $w = 2$ 이니 이 값을 $\enclose{circle}{2}$ 번째 행에 대입하여 $u=1$ 을 구하고, 두 값을 $\enclose{circle}{1}$ 번째 행에 대입하여 $u=1$ 을 구하면 됩니다. 이렇게 왼쪽에 있는 행렬을 상삼각행렬로 만드는 과정을 가우스 소거법이라고 합니다. 여기서 대각 성분에 해당하는 $2, -8, 1$을 **피봇(Pivot)**이라고 합니다. 만약 계산하면서 피봇 자리에 $0$이 등장하는 경우에는 그 열의 성분이 $0$이 아닌 다른 행과 바꾸어 다시 소거 계산하면 되는데 이렇게 바꿔주는 과정을 **피봇팅(Pivoting)**이라고 합니다. 예시처럼 모든 피봇이 $0$이 아니면 연립방정식에 특정한 해(Unique solution)이 존재하는 경우에 해당합니다. 반대로 그렇지 않은 연립방정식은 해가 없거나(No solution) 무한한 해(Infinite solution)를 가집니다.
+
+## LU Factorization (Decomposition)
+
+**LU분해법(LU Factorization, LU Decomposition)**은 가우스 소거법을 사용하여 특정한 행렬을 하삼각 행렬과 상삼각 행렬의 곱으로 분해하는 방법입니다. 위에서 가우스 소거를 했던 예시를 통해 LU분해법에 대해 알아보겠습니다. LU 분해법은 이름에서도 유추할 수 있듯, **특정한 행렬을 하삼각행렬(Lower triangular matrix, $L$)**과 상삼각행렬의 곱으로 분해하는 것입니다. 
 
 
 
-## LU Factorization(Decomposition)
-
-**LU분해법(LU Factorization, LU Decomposition)** 은 특정 행렬을 하삼각행렬과 상삼각행렬의 곱으로 변환하는 것이다. 위에서 보았던 가우스 소거법을 활용하면 LU분해를 할 수 있다. 위에서 가우스 소거를 했던 예시를 통해 LU분해법에 대해 알아보자.
-
+특정 행렬을 하삼각행렬과 상삼각행렬의 곱으로 변환하는 것이다. 위에서 보았던 가우스 소거법을 활용하면 LU분해를 할 수 있다. 위에서 가우스 소거를 했던 예시를 통해 LU분해법에 대해 알아보자.
 
 $$
 \left[\begin{array}{ccc} 2 & 1 & 1 \\ 4 & -6 & 0 \\ -2 & 7 &2 \end{array} \right]\left[\begin{array}{ccc} u \\ v \\w \end{array} \right] = \left[\begin{array}{ccc} 5 \\ -2 \\ 9 \end{array} \right]
