--- a/_posts/2020-03-23-CNN.md
+++ b/_posts/2020-03-23-CNN.md
@@ -1,318 +1,102 @@
 ---
 layout: post
-title: 6. 합성곱 신경망(CNN)
+title: 합성곱 신경망 (Convolutional Neural Network, CNN)
 category: Deep Learning
 tag: Deep-Learning
 ---
 
 
 
-## 1) 전체 구조
+# CNN
 
-- 합성곱 신경망은 이전의 완전 연결 층에서는 볼 수 없었던, 2개의 층(합성곱 계층 - Conv 과 풀링 계층 - Pooling)이 추가된다. (풀링 계층은 생략될 수도 있다.) 또, 층의 마지막 부분, 즉 아래 그림에서의 Classifer쪽 부분에서는 이전의 완전 연결 층을 결합하여 사용한다.
+**합성곱 신경망(Convolutional Neural Network, CNN)**은 컴퓨터 비전(Computer vision)분야에서 특히 많이 쓰이는 신경망입니다. 합성곱 신경망이 주목을 받게 된 것도 2012년 이미지넷(ImageNet) 데이터셋을 분류하는 ILSVRC대회에서 우승한 AlexNet 덕분이었습니다.
 
-<p align="center"><img src="https://miro.medium.com/max/700/1*gpqAAvdoj-VcFlKK8y9zAQ.jpeg" alt="CNN Structure"  /></p>
+이미지 분류에서 합성곱 신경망이 주목받게 된 이유는 무엇일까요? 이미지는 위치에 맞는 공간적인 특성을 가지고 있습니다. 하지만 일반적인 완전 연결층(Fully connected layer)은 모든 입력 값을 동등하게 취급하기 때문에 이런 공간적 특성을 잘 살려내지 못합니다. MNIST 손글씨 데이터를 완전 연결층으로 분류해본 분이라면 $(24,24)$ 데이터를 $(768,)$ 로 펼친 뒤에 신경망에 넣어본 적이 있을 것입니다. 물론 손글씨 데이터는 색상도 흑백인데다가 패턴이 간단하기 때문에 완전 연결 층으로도 꽤 좋은 분류기를 구현할 수 있습니다. 하지만 패턴이 복잡한 컬러 이미지를 이런 방식으로 분류하는 것은 쉬운일이 아닙니다.
 
+반면 합성곱 신경망은 학습 과정에서 이런 공간적 특성을 보존하며 학습할 수 있습니다. 합성곱 층은 완전 연결 층과 달리 3차원 데이터를 입력받아 다시 3차원 데이터를 내놓습니다. 덕분에 층이 깊어지더라도 공간적 특성을 최대한 보존하며 학습할 수 있습니다.
 
+## Structure
 
+합성곱 신경망의 구조가 어떻기에 이런 공간적 특성을 보존할 수 있는 것일까요? 먼저 합성곱 신경망의 구조를 살펴보겠습니다.
 
-<br/>
+<p align="center"><img src="https://miro.medium.com/max/1225/1*gpqAAvdoj-VcFlKK8y9zAQ.jpeg" alt="cnn_structure" style="zoom:90%;" /></p>
 
-## 2) 합성곱 계층
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://medium.com/@sdoshi579/convolutional-neural-network-learn-and-apply-3dac9acfe2b6">medium.com/@sdoshi579</a></p>
 
-- **완전연결 계층의 문제점** : 이미지는 통상적으로 3차원(가로, 세로, 채널) 데이터. 각 위치에 맞는 공간적 특성을 담고 있다. 완전 연결 층은 이러한 특성을 무시하고 모든 입력 값을 동등한 뉴런으로 취급하여 패턴을 살려내지 못한다. 반면, 합성곱 신경망은 3차원 데이터를 입력받아 다시 3차원 데이터를 내놓기 때문에 형상을 유지하며 학습해나갈 수 있다.
+합성곱 신경망은 크게 두 종류의 층으로 이루어져 있습니다. 하나는 위 그림에서 하늘색에 해당하는 합성곱 층(Convolutional layer)이고 나머지 하나는 주황색에 해당하는 풀링 층(Pooling layer)입니다. 마지막에는 분류를 위해 완전 연결 층을 하나 결합하여 사용합니다. 각 층에서 어떤 일이 일어나는지 하나씩 알아보도록 하겠습니다.
 
+## Conv Layer
 
-
-- **합성곱 연산** : 입력 데이터에 특정 크기의 커널(Kernal Matrix)을 적용하여 새로운 출력값을 계산해낸다. 아래 그림은 합성곱이 계산되는 과정이다. 이와 같이 특정 커널이 움직이며 대응하는 원소끼리 곱한 후 총합을 구해낸다. 커널은 완전 연결 층에서의 **가중치** 와 같은 역할을 한다. 합성곱 신경망에도 가중치 외에 편향이 존재하며 이는 커널과의 곱을 구한 후에 특정 값을 모든 값에 더해주는 방식으로 적용된다.
+**합성곱 층**은 입력 데이터에 특정 크기의 **커널(Kernal matrix)**을 적용하여 새로운 출력값을 계산하는 역할을 합니다. 아래 그림은 합성곱 층에서 입력 데이터로부터 합성곱 연산을 수행하는 과정을 나타낸 것입니다.
 
 <p align="center"><img src="https://i.stack.imgur.com/Tnfmi.gif" alt="Convolutional Cal" style="zoom: 80%;" /></p>
 
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://stackoverflow.com/questions/52067833/how-to-plot-an-animated-matrix-in-matplotlib">stackoverflow.com</a></p>
 
+커널은 왼쪽 위부터 시작하며 오른쪽 끝까지 행렬 원소끼리의 곱을 수행한 후에 다시 아래쪽 열 왼쪽부터 오른쪽으로 동일한 과정을 수행합니다. 커널에 있는 $0, -1, 5$와 같은 숫자는 파라미터이며 학습을 통해서 갱신됩니다. 합성곱 신경망에는 커널 외에도 편향을 적용할 수 있습니다. 커널과의 합성곱을 통해 나온 행렬의 모든 원소에 편향을 더하여 적용합니다. 합성곱 층에는 커널의 크기 외에도 옵션으로 적용할 수 있는 패딩과 스트라이드가 있습니다. 먼저 패딩의 역할부터 알아보겠습니다. 
 
-- **패딩(Padding)** : 연산을 수행하기 전에 입력 데이터 주변을 특정 값으로 채우는 것을 패딩이라고 한다. 위에서 살펴본 그림에서 값을 0으로 하고 폭이 1인 패딩이 적용된 모습을 볼 수 있다. 
-- **스트라이드(Stride)** : 필터를 적용하는 위치의 간격을 스트라이드라고 한다. 위에서 살펴본 그림은 스트라이드가 1일 때 커널이 적용되는 모습이며, 스트라이드가 2인 경우에는 2칸씩 뛰면서 커널이 적용된다. 입력 데이터의 크기와 패딩, 스트라이드를 알면 출력값의 크기를 다음과 같은 식을 통해 알 수 있다.
+**패딩(Padding)**은 위 예시에서 볼 수 있는 것처럼 입력 데이터 주변을 특정 값으로 채우는 것을 패딩이라고 합니다. 위 예시에서는 값이 0이고 폭이 1인 패딩이 적용되었습니다. $1 \times 1$ 보다 큰 크기의 커널을 사용하면 합성곱 연산의 특성상 입-출력 크기가 많이 달라집니다. 패딩은 이런 크기 변화를 완화해주는 역할을 합니다. 위 예시에서도 폭이 1인 패딩을 사용하지 않았다면 출력되는 행렬의 크기는 $5 \times 5$ 가 아니라 $3 \times 3$ 으로 줄어들 것입니다. 패딩은 행렬 바깥에 특정한 값을 둘러줌으로써 이미지 가장자리 부분의 특성을 보존할 수 있다는 장점이 있습니다.
+
+**스트라이드(Stride)**는 필터를 적용하는 위치의 간격입니다. 위에서 살펴본 예시에서는 스트라이드가 $1$로 오른쪽으로 $1$칸씩 이동하면서 합성곱을 수행한 뒤에 $1$칸 아래로 이동하여 같은 과정을 반복합니다. 스트라이드가 $2$이면 오른쪽으로 $2$칸씩 이동하면서 합성곱을 수행하고 오른쪽 끝에 닿으면 $2$칸 아래로 이동하여 같은 과정을 반복하게 됩니다.
+
+패딩은 합성곱의 대상이 되는 행렬을 확장해주는 반면, 스트라이드는 일정 간격으로 합성곱을 건너뜁니다. 이 때문에 패딩을 늘리면 출력 크기가 늘어나게 되고, 스트라이드를 늘리면 출력 크기는 줄어들게 됩니다. 입력 데이터의 높이와 너비를 각각 $H, W$라 하고 커널의 높이와 너비를 $KH, KW$ 그리고 패딩과 스트라이드를 각각 $P, S$ 라 하면 출력 데이터의 크기는 아래와 같은 수식을 통해 구할 수 있습니다.
+
 
 $$
-OH = \frac{H+2P-FH}{S}+1 \\ OW = \frac{W+2P-FW}{S}+1 \\ \text{입력 크기 : (H, W)} \quad \text{필터 크기 : (FH, FW)} \quad \text{출력 크기 : (OH, OW)} \quad \text{패딩 : P, 스트라이드 : S}
+OH = \frac{H+2P-FH}{S}+1 \qquad OW = \frac{W+2P-FW}{S}+1
 $$
 
-  
 
-- 3차원 데이터의 합성곱 연산 : $k$ 개의 채널이 있는 경우 $k$ 개의 필터를 적용하여 병렬 연산을 한 뒤 그 합을 출력 데이터에 입력한다. 예를 들어 3개의 채널이 있는 입력 데이터는 3개의 커널과 각각 연산되어 그 총합을 새로운 출력 데이터로 받게 된다.
+위 예시에서 입력 데이터의 사이즈는 $5 \times 5$ 이며 커널의 크기는 $3 \times 3$ 이었습니다. 패딩은 $1$이 적용되었고 스트라이드도 $1$이므로 아래 수식을 통해서 출력 데이터의 크기를 구할 수 있습니다.
 
-- 블록으로 생각하기 : 3차원의 합성곱 연산은 데이터와 필터를 직육면체 블록이라고 생각하면 좀 더 쉽게 상상할 수 있다. 3차원 데이터를 다차원 배열로 나타낼 때에는 (Channel, Height, Width) $(\mathbf{C}, \mathbf{H}, \mathbf{W})$ 순으로 쓰기로 하고, 3차원 필터도 (Channel,  Filter Height, Filter Width) $(\mathbf{C}, \mathbf{FH}, \mathbf{FW})$ 순으로 쓰기로 한다.
 
-- 배치 처리 : CNN도 완전 연결 신경망과 동일하게 배치를 활용하여 처리 효율을 높일 수 있다. 배치의 크기가 N일 경우 데이터를 $(\mathbf{N}, \mathbf{C}, \mathbf{H}, \mathbf{W})$ 로 나타내며, 필터는 $(\mathbf{FN}, \mathbf{C}, \mathbf{FH}, \mathbf{FW})$ 로 나타낸다. 
+$$
+OH = \frac{5+2\cdot 1-3}{1}+1=5 \qquad OW = \frac{4+2\cdot 1-3}{1}+1=5
+$$
 
-  
 
-<br/>
+위 수식으로 출력데이터의 크기 $5 \times 5$를 정확히 구해낼 수 있습니다. 
 
-## 3) 풀링 계층
 
-- **풀링(Pooling)** : 풀링은 가로, 세로 방향의 공간을 줄이기 위한 연산이다. 아래 그림은 2X2 **최대 풀링(Max pooling)** 을 스트라이드 2로 처리하는 과정을 나타낸 것이다. 풀링 계층에서의 입력 데이터는 최대 풀링 과정을 통해 각 윈도우에서의 최댓값만을 남기고 줄어들게 된다. 풀링에서 스트라이드의 크기는 윈도우 크기와 같게 해주는 것이 일반적이다. 
 
-<p align="center"><img src="https://i2.wp.com/principlesofdeeplearning.com/wp-content/uploads/2018/07/poolingmax.png?resize=768%2C339&amp;ssl=1" alt="Max pooling" style="zoom: 67%;" /></p>
+### with Channels
 
-최대 풀링 이외에도 평균 풀링이 있다. 평균 풀링은 각 윈도우 내부 값들의 평균을 새로운 출력 데이터 값으로 계산한다. 하지만 이미지 인식에서는 최대 풀링을 사용하는 것이 일반적이다.
+컬러 이미지인 경우에는 이미지의 차원이 더 늘어납니다. RGB값을 각각 적용하기 때문입니다. 이렇게 채널이 많아지는 경우에는 채널 갯수만큼의 커널을 각각 적용하여 병렬 연산을 한 뒤에 그 합을 출력데이터에 입력합니다. 아래의 그림은 3개의 채널로 구성된 입력 데이터의 합성곱 연산이 수행되는 과정을 이미지로 나타낸 것입니다.
 
+<p align="center"><img src="https://static.wixstatic.com/media/d77a32_b1ce73c8e98943c09834844ec9dd50e2~mv2.gif" alt="3channels"  /></p>
 
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.thelearningmachine.ai/cnn">thelearningmachine.ai</a></p>
 
-- 풀링 계층의 특징
-  - 학습해야 할 매개변수가 없다
-  - 채널 수가 변하지 않는다
-  - 입력 변화에 영향을 적게 받는다(강건하다) : 입력 데이터가 변하더라도 풀링의 결과는 크게 변하지 않는다.
 
 
+## Pooling Layer
 
-<br/>
+풀링 층에서는 가로, 세로 방향의 공간을 줄이기 위한 **풀링(Pooling)**을 수행합니다. 풀링 방법에는 최대 풀링(Max pooling)과 평균 풀링(Average pooling)이 있습니다. 최대 풀링은 정해진 범위 내에서 가장 큰 값을 꺼내오는 방식이며 평균 풀링은 정해진 범위 내에 있는 모든 요소의 평균을 가져오는 방식입니다. 일반적으로 이미지를 처리할 때에는 각 부분의 특징을 최대로 보존하기 위해서 최대 풀링을 사용하고 있습니다. 아래 그림은 $2 \times 2$ 크기의 최대 풀링과 평균 풀링을 처리하는 과정을 비교하여 나타낸 것입니다.
 
-## 4) 합성곱/풀링 계층 구현하기
 
-- **4차원** 배열 : CNN에서의 데이터는 전체 4차원 형태(개수, 채널, 높이, 너비)로 움직인다. 예를 들어 28X28 크기 흑백이미지 60000개로 구성된 MNIST 손글씨 데이터셋을 나타내면 (60000, 1. 28, 28) 이 된다.
-- **im2col** (image to column) 로 데이터 전개하기 : 4차원 데이터를 연산하기 위해서 for문 대신 **im2col** 이라는 편의함수를 사용. im2col은 커널을 적용하기 좋도록 3차원 블록을 2차원 평면에 늘어놓는다.
-- 합성곱 계층 구현하기
 
-im2col 함수는 아래와 같다.
+<p align="center"><img src="https://qph.fs.quoracdn.net/main-qimg-939c3123c48e27301f1a89c0a299dca8" alt="pooling"  /></p>
 
-```python
-im2col(input_data, filter_h, filter_w, stride=1, pad=0):
-    #stride의 크기는 1, padding은 없는 것으로 한다.
-    
-    N, C, H, W = input_data.shape
-    out_h = (H + 2*pad - filter_h)//stride + 1
-    out_w = (W + 2*pad - filter_w)//stride + 1
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.quora.com/What-is-max-pooling-in-convolutional-neural-networks">quora.com</a></p>
 
-    img = np.pad(input_data, [(0, 0), (0, 0), (pad, pad), (pad, pad)], 'constant')
-    col = np.zeros(N, C, filter_h, filter_w, out_h, out_w)
+위 그림에서 왼쪽은 최대 풀링으로 각각의 $2 \times 2$의 범위 내에서 가장 큰 요소인 $100, 184, 12, 45$ 출력 데이터로 가져옵니다. 오른쪽은 평균 풀링으로 각각의 $2 \times 2$의 범위 내 요소의 평균값인 $36, 80, 12, 15$ 를 출력 데이터로 가져옵니다. 풀링 층은 학습해야 할 매개변수가 없고 채널 수가 변하지 않으며 강건(Robust)하기 때문에 입력 변화에 영향을 적게 받는다는 특징을 가지고 있습니다.
 
-    for y in range(filter_h):
-        y_max = y + stride*out_h
-        for x in range(filter_w):
-            x_max = x + stride*out_w
-            col[:, :, y, x, :, :] = img[:, :, y:y_max:stride, x:x_max:stride]
 
-    col = col.transpose(0, 4, 5, 1, 2, 3).reshape(N*out_h*out_w, -1)
-    # 2차원 배열 col으로 reshape
-    return col
-```
 
-구현한 **im2col** 을 사용하여 합성곱 계층을 구현해보자.
+## Deep CNN
 
-```python
-class Convolution:
-    def __init__(self, W, b, stride=1, pad=0):
-        self.W = W
-        self.b = b
-        self.stride = stride
-        self.pad = pad
+합성곱 신경망에서는 층을 깊게 쌓으면 어떤 이점이 있을까요? 각 합성곱 층마다 어떤 패턴을 학습하는 지를 시각화 해보면 신경망이 이미지를 어떤 방식으로 바라보는 지를 알 수 있습니다. 합성곱 신경망에서 연산이 일어나는 과정을 생각해보면 입력 데이터와 가까운 쪽의 합성곱 층은 이미지의 극히 일부 밖에 볼 수 없습니다. 하지만 층이 깊어지면 한 번에 이미지의 많은 부분을 볼 수 있습니다. 풀링 과정을 여러 번 거치면서 많은 픽셀 정보가 응축되기 때문입니다.
 
-    def forward(self, x):
-        FN, C, FH, FW = self.W.shape
-        N, C, H, W = x.shape
-        out_h = int(1 + (H + 2*self.pad - FH) / self.stride)
-        out_w = int(1 + (W + 2*self.pad - FW) / self.stride)
+대표적인 합성곱 신경망 모델 중 하나인 알렉스넷(Alexnet)의 경우 1번째 합성곱 층에서는 엣지(Edge)나 블롭(Blob)등을 학습하고 3번째 층은 텍스쳐(Texture)를 학습합니다. 5번째 층에 다다르면 사물의 일부를 학습한다는 것으로 알려져 있습니다. 아래는 임의의 합성곱 신경망 내부에 있는 합성곱 층에서 학습하는 패턴을 시각화한 것입니다.
 
-        col = im2col(x, FH, FW, self.stride, self.pad)
-        # 4차원 데이터(개수, 3차원)를 받아, im2col 함수를 사용하여 2차원(개수, 1차원) 벡터로 변환
-        col_W = self.W.reshape(FN, -1).T
-        out = np.dot(col, col_W) + self.b
-        out = out.reshape(N, out_h, out_w, -1).transpose(0, 3, 1, 2)
-        # 가중치(col_W)를 곱하고 편향(b)을 더해준 값을 다시 4차원으로 reshape
-        
-        return out
-```
+<p align="center"><img src="https://deeplizard.com/images/stitched_filters_block1_conv1.png" alt="1stLayer" style="zoom:67%;" /></p>
 
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://deeplizard.com/learn/video/cNBBNAxC8l4">deeplizard.com</a></p>
 
+위 이미지는 입력 데이터와 가장 가까운 층으로 세로, 가로, 대각선 등의 엣지(Edge)를 학습하는 것을 알 수 있습니다. 
 
-- 풀링 계층 구현하기 : 풀링 계층의 구현도 합성곱 계층과 마찬가지로 im2col을 사용하여 입력 데이터를 전개한다. 
+<p align="center"><img src="https://deeplizard.com/images/stitched_filters_block5_conv2.png" alt="LastLayer" style="zoom:67%;" /></p>
 
-```python
-class Pooling:
-    def __init__(self, W, b, stride=1, pad=0):
-        self.pool_h = pool_h
-        self.pool_w = pool_w
-        self.stride = stride
-        self.pad = pad
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://deeplizard.com/learn/video/cNBBNAxC8l4">deeplizard.com</a></p>
 
-    def forward(self, x):
-        N, C, H, W = x.shape
-        out_h = int(1 + (H - self.pool_h) / self.stride)
-        out_w = int(1 + (W - self.pool_w) / self.stride)
-	
-        col = im2col(x, self.pool_h, self.pool_w, self.stride, self.pad)
-        col = col.reshape(-1, self.pool_h*self.pool_w)
-        # im2col 함수를 통해 이미지 데이터를 2차원으로 전개
-
-        out = np.max(col, axis=1)
-        # col 마다의 최댓값 추출
-
-        out = out.reshape(N, out_h, out_w, C).transpose(0, 3, 1, 2)
-        # 다음 합성곱 층에서 데이터를 받을 수 있도록 4차원으로 성형
-
-        return out
-```
-
-
-
-<br/>
-
-## 5) CNN 구현하기
-
-위에서 구현한 합성곱 계층과 풀링 계층을 사용하여 간단한 CNN을 만들어보자. 아래 코드로 구성되는 CNN의 구조는 Conv - ReLU - Pool - Affine - ReLU - Affine - Softmax 이다.
-
-```python
-class SimpleConvNet:
-    def __init__(self, input_dim=(1, 28, 28), 
-                 conv_param={'filter_num':30, 'filter_size':5, 'pad':0, 'stride':1},
-                 hidden_size=100, output_size=10, weight_init_std=0.01):
-        
-        filter_num = conv_param['filter_num']
-        filter_size = conv_param['filter_size']
-        filter_pad = conv_param['pad']
-        filter_stride = conv_param['stride']
-        #conv_param으로부터 각 값을 추출하여 할당
-        
-        input_size = input_dim[1]
-        conv_output_size = (input_size - filter_size + 2*filter_pad) / filter_stride + 1
-        pool_output_size = int(filter_num * (conv_output_size/2) * (conv_output_size/2))
-
-        # 가중치 초기화
-        self.params = {}
-        self.params['W1'] = weight_init_std * \
-                            np.random.randn(filter_num, input_dim[0], filter_size, filter_size)
-        self.params['b1'] = np.zeros(filter_num)
-        self.params['W2'] = weight_init_std * \
-                            np.random.randn(pool_output_size, hidden_size)
-        self.params['b2'] = np.zeros(hidden_size)
-        self.params['W3'] = weight_init_std * \
-                            np.random.randn(hidden_size, output_size)
-        self.params['b3'] = np.zeros(output_size)
-
-        # 계층 생성
-        self.layers = OrderedDict()
-        self.layers['Conv1'] = Convolution(self.params['W1'], self.params['b1'],
-                                           conv_param['stride'], conv_param['pad'])
-        self.layers['Relu1'] = Relu()
-        self.layers['Pool1'] = Pooling(pool_h=2, pool_w=2, stride=2)
-        self.layers['Affine1'] = Affine(self.params['W2'], self.params['b2'])
-        self.layers['Relu2'] = Relu()
-        self.layers['Affine2'] = Affine(self.params['W3'], self.params['b3'])
-
-        self.last_layer = SoftmaxWithLoss()
-
-    def predict(self, x):
-        for layer in self.layers.values():
-            x = layer.forward(x)
-
-        return x
-
-    def loss(self, x, t):
-        y = self.predict(x)
-        return self.last_layer.forward(y, t)
-
-    def accuracy(self, x, t, batch_size=100):
-        if t.ndim != 1 : t = np.argmax(t, axis=1)
-        
-        acc = 0.0
-        
-        for i in range(int(x.shape[0] / batch_size)):
-            tx = x[i*batch_size:(i+1)*batch_size]
-            tt = t[i*batch_size:(i+1)*batch_size]
-            y = self.predict(tx)
-            y = np.argmax(y, axis=1)
-            acc += np.sum(y == tt) 
-        
-        return acc / x.shape[0]
-
-    def numerical_gradient(self, x, t):
-        loss_w = lambda w: self.loss(x, t)
-
-        grads = {}
-        for idx in (1, 2, 3):
-            grads['W' + str(idx)] = numerical_gradient(loss_w, self.params['W' + str(idx)])
-            grads['b' + str(idx)] = numerical_gradient(loss_w, self.params['b' + str(idx)])
-        # 수치 미분을 이용하여 그래디언트를 구하는 함수 (시간이 오래 걸림)
-
-        return grads
-
-    def gradient(self, x, t):
-        # forward
-        self.loss(x, t)
-
-        # backward
-        dout = 1
-        dout = self.last_layer.backward(dout)
-
-        layers = list(self.layers.values())
-        layers.reverse()
-        for layer in layers:
-            dout = layer.backward(dout)
-
-        # 결과 저장
-        grads = {}
-        grads['W1'], grads['b1'] = self.layers['Conv1'].dW, self.layers['Conv1'].db
-        grads['W2'], grads['b2'] = self.layers['Affine1'].dW, self.layers['Affine1'].db
-        grads['W3'], grads['b3'] = self.layers['Affine2'].dW, self.layers['Affine2'].db
-		
-        # 오차 역전파법을 이용하여 그래디언트를 구하는 함수
-        return grads
-        
-    def save_params(self, file_name="params.pkl"):
-        params = {}
-        for key, val in self.params.items():
-            params[key] = val
-        with open(file_name, 'wb') as f:
-            pickle.dump(params, f)
-
-    def load_params(self, file_name="params.pkl"):
-        with open(file_name, 'rb') as f:
-            params = pickle.load(f)
-        for key, val in params.items():
-            self.params[key] = val
-
-        for i, key in enumerate(['Conv1', 'Affine1', 'Affine2']):
-            self.layers[key].W = self.params['W' + str(i+1)]
-            self.layers[key].b = self.params['b' + str(i+1)]
-            
-        # 각 가중치를 저장하고 불러온다.
-```
-
-
-
-<br/>
-
-## 6) CNN 시각화하기
-
-합성곱 신경망이 어떤 방법으로 학습을 진행해나가는지 알아보자.
-
-- 1번째 층의 가중치 시각화하기
-  - 학습 전의 필터는 무작위로 초기화되고 있기 때문에 흑백 정도에 규칙성이 없다. 
-  - 학습 후에는 필터마다 특정한 모양(패턴)이 드러나게 된다. 이는 각 영역의 엣지(Edge)를 나타내게 된다.
-
-
-
-- 층 깊이에 따른 추출 정보 변화 : 위에서 볼 수 있 듯 1층에서는 엣지나 블롭 등 낮은 수준의 정보가 추출된다. 그렇다면 다른 층에서는 어떤 정보를 학습할까? 딥러닝 시각화에 관한 연구에 따르면, 계층이 깊어질수록 추출되는 정보는 더 추상화 된다고 한다. Pretrained Model인 Alexnet의 경우 1층에서는 엣지나 블롭 등을 학습하고, 3번째 층은 텍스처(Texture)를 학습한다. 더 나아가 5번째 층에서는 사물의 일부를 학습하고 최종적으로 완전 연결 층의 마지막에서는 사물의 클래스에 뉴런이 반응하게 된다.
-
-
-
-<br/>
-
-## 7) 대표적인 CNN
-
-- LeNet : 손글씨 숫자를 인식하는 네트워크로, 1998년에 제안되었다. 아래는 LeNet을 그림으로 나타낸 것이다.
-
-  ![LeNet](http://nocotan.github.io/images/20170804/lenet.png)
-
-  - LeNet은 초기에 개발된 모델으로 현재 많이 사용되는 CNN과는 몇 가지 다른 점을 가지고 있다.
-    - 활성화 함수 : LeNet의 활성화 함수는 시그모이드 함수인데 비하여, 현재는 주로 ReLU를 활성화 함수를 사용한다.
-    - 데이터를 축소하는 방법 : 현재의 모델은 위에서 나온 최대 풀링을 사용하여 데이터를 단순화해나간다. 반면에 LeNet은 데이터의 축소를 위해 서브샘플링을 사용한다.
-
-
-
-- AlexNet : 2012년에 발표된 AlexNet은 합성곱 계층과 풀링 계층을 거듭한 뒤 마지막으로 완전 연결 계층을 거쳐 결과를 출력한다. AlexNet은 활성화 함수로 ReLU를 사용하고 있다. LRN(Local Response Normalization)이라는 국소적 정규화를 실시하는 계층을 이용하며 드롭아웃을 이용해 오버피팅을 방지한다. 아래는 AlexNet을 그림으로 나타낸 것이다.
-
-
-
-[^1]: 입력층의 경우 따로 명시하지 않는다는 의견도 있다. 
+위 이미지는 입력 데이터와 가장 멀리 떨어진 층, 즉 완전 연결 층과 연결된 합성곱 층으로 추상화된 사물의 형태를 패턴으로 학습하고 있는 것을 볼 수 있습니다.
